--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/CO2_H2O_System.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/CO2_H2O_System.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "hide-input"
@@ -121,13 +121,13 @@
     "\n",
     "From {eq}`eq1`, $m_{H^+}=10^{-pH}$, rearranging it and using the assumption, we get:\n",
     "\n",
-    "$$m_{HCO_{3}^{-}} = \\frac{K_1 \\cdot m_{H_2CO_3}}{10^{-pH}}$$ (eq1')\n",
+    "$$m_{HCO_{3}^{-}} = \\frac{K_1 \\cdot m_{H_2CO_3}}{10^{-pH}}$$ (eq1prime)\n",
     "\n",
-    "From $m_{H^+}=10^{-pH}$, {eq}`eq2` and {eq}`eq1'`, using the assumption, we get:\n",
+    "From $m_{H^+}=10^{-pH}$, {eq}`eq2` and {eq}`eq1prime`, using the assumption, we get:\n",
     "\n",
-    "$$m_{CO_{3}^{2-}} = \\frac{K_2 \\cdot K_1 \\cdot m_{H_2CO_3}}{10^{-2 \\cdot pH}}$$ (eq2')\n",
+    "$$m_{CO_{3}^{2-}} = \\frac{K_2 \\cdot K_1 \\cdot m_{H_2CO_3}}{10^{-2 \\cdot pH}}$$ (eq2prime)\n",
     "\n",
-    "Substituting {eq}`eq1'` and {eq}`eq2'` into {eq}`eq5`, we get:\n",
+    "Substituting {eq}`eq1prime` and {eq}`eq2prime` into {eq}`eq5`, we get:\n",
     "\n",
     "$$m_{total} = m_{H_2CO_3} + \\frac{K_1 \\cdot m_{H_2CO_3}}{10^{-pH}} + \\frac{K_2 \\cdot K_1 \\cdot m_{H_2CO_3}}{10^{-2 \\cdot pH}}$$\n",
     "\n",
@@ -143,28 +143,27 @@
     "\n",
     "$$m_{H_2CO_3} = \\frac{m_{total}}{F_H}$$ (eqa)\n",
     "\n",
-    "Substituting {eq}`eqa` into {eq}`eq1'` and {eq}`eq2'`, we get:\n",
+    "Substituting {eq}`eqa` into {eq}`eq1prime` and {eq}`eq2prime`, we get:\n",
     "\n",
     "$$m_{HCO_{3}^{-}} = \\frac{m_{total} \\cdot K_1}{F_H \\cdot 10^{-pH}}$$ (eqb)\n",
     "\n",
     "$$m_{CO_{3}^{2-}} = \\frac{m_{total} \\cdot K_2 \\cdot K_1}{F_H \\cdot 10^{-2 \\cdot pH}}$$ (eqc)\n",
     "\n",
-    "The derivations of {eq}`eqa`, {eq}`eqb` and {eq}`eqc` lead to the speciation of the carbon system as a\n",
-    "function of $pH$, as shown below."
+    "The derivations of {eq}`eqa`, {eq}`eqb` and {eq}`eqc` lead to the speciation of the carbon system as a function of $pH$, as shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20e88a4a640>"
+       "<matplotlib.legend.Legend at 0x1fd60a9e460>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,108 +266,69 @@
     "\n",
     "$$K_H \\cdot pCO_2 = (CO_2)_{aq}$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    "K_H = \\frac{a_{(CO_2)_{aq}}}{P_{CO_2}}\n",
-    "\\label{Henry_CO2} \\tag{5}\n",
-    "\\end{equation*}\n",
+    "$$K_H = \\frac{a_{(CO_2)_{aq}}}{P_{CO_2}}$$ (eq6)\n",
     "\n",
     "Some dissolved $CO_2$ will react with water to form carbonic acid:\n",
     "\n",
     "$$(CO_2)_{aq} + H_2O = H_2CO_3$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    "K_0 = \\frac{a_{H_2CO_3}}{a_{(CO_2)_{aq}} \\cdot a_{H_2O}} = \\frac{a_{H_2CO_3}}{a_{(CO_2)_{aq}}}\n",
-    "\\label{form_H2CO3} \\tag{6}\n",
-    "\\end{equation*}\n",
+    "$$K_0 = \\frac{a_{H_2CO_3}}{a_{(CO_2)_{aq}} \\cdot a_{H_2O}} = \\frac{a_{H_2CO_3}}{a_{(CO_2)_{aq}}}$$ (eq7)\n",
     "\n",
-    "Rearranging $(5)$ and $(6)$, we get:\n",
+    "Rearranging {eq}`eq6` and {eq}`eq7`, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "a_{(CO_2)_{aq}} = K_H \\cdot P_{CO_2}\n",
-    "\\label{a_CO2} \\tag{5'}\n",
-    "\\end{equation*}\n",
+    "$$a_{(CO_2)_{aq}} = K_H \\cdot P_{CO_2}$$ (eq6prime)\n",
     "\n",
-    "\\begin{equation*} \n",
-    "a_{H_2CO_3} = K_0 \\cdot a_{(CO_2)_{aq}}\n",
-    "\\label{a_H2CO3} \\tag{6'}\n",
-    "\\end{equation*}\n",
+    "$$a_{H_2CO_3} = K_0 \\cdot a_{(CO_2)_{aq}}$$ (eq7prime)\n",
     "\n",
-    "Substituting $(5')$ into $(6')$, we get:\n",
+    "Substituting {eq}`eq6prime` into {eq}`eq7prime`, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "a_{H_2CO_3} = K_0 \\cdot K_H \\cdot P_{CO_2}\n",
-    "\\label{a_H2CO3_final} \\tag{6''}\n",
-    "\\end{equation*}\n",
+    "$$a_{H_2CO_3} = K_0 \\cdot K_H \\cdot P_{CO_2}$$ (eq6prime2)\n",
     "\n",
     "Combine both of the carbon-bearing species in water as $H_2CO_3^*$\n",
     "\n",
-    "\\begin{align} \n",
-    "a_{H_2CO_3^* } &= a_{(CO_2)_{aq}} + a_{H_2CO_3} \\\\ \n",
-    "&= K_H \\cdot P_{CO_2} + K_0 \\cdot K_H \\cdot P_{CO_2} \\\\\n",
-    "&= K_H \\cdot (1+K_0) \\cdot P_{CO_2}\n",
-    "\\end{align} \n",
+    "$$a_{H_2CO_3^* } = a_{(CO_2)_{aq}} + a_{H_2CO_3}$$\n",
+    "\n",
+    "$$= K_H \\cdot P_{CO_2} + K_0 \\cdot K_H \\cdot P_{CO_2}$$\n",
+    "\n",
+    "$$= K_H \\cdot (1+K_0) \\cdot P_{CO_2}$$\n",
     "\n",
     "In reality, $K_H >> K_0$, so $a_{(CO_2)_{aq}} >> a_{H_2CO_3}$, and\n",
     "\n",
     "$$a_{H_2CO_3^*} \\approx K_H \\cdot P_{CO_2}$$\n",
     "\n",
-    "Recall (1), (2), (3), (4), (5), but rewrite (1) and (5):\n",
+    "Recall {eq}`eq1`, {eq}`eq2`, {eq}`eq3`, {eq}`eq4`, {eq}`eq6`, but rewrite {eq}`eq1` and {eq}`eq6`:\n",
     "\n",
     "$$H_2CO_3^* = HCO_{3}^{-} + H^+$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    "K_1 = \\frac{a_{H^+} \\cdot a_{HCO_{3}^{-}}}{a_{H_2CO_3^{* }}} = 10^{-6.35}\n",
-    "\\label{dis_H2CO3*} \\tag{1*}\n",
-    "\\end{equation*}\n",
+    "$$K_1 = \\frac{a_{H^+} \\cdot a_{HCO_{3}^{-}}}{a_{H_2CO_3^{* }}} = 10^{-6.35}$$ (eq1star)\n",
     "\n",
-    "\\begin{equation*} \n",
-    " K_2 = \\frac{a_{H^+} \\cdot a_{CO_{3}^{2-}}}{a_{HCO_{3}^{-}}} = 10^{-10.33}\n",
-    "\\label{dis_HCO3} \\tag{2}\n",
-    "\\end{equation*}\n",
+    "$$K_2 = \\frac{a_{H^+} \\cdot a_{CO_{3}^{2-}}}{a_{HCO_{3}^{-}}} = 10^{-10.33}$$ (eq2)\n",
     "\n",
-    "\\begin{equation*} \n",
-    " K_W = \\frac{a_{H^+} \\cdot a_{OH^-}}{a_{H_2O}} = 10^{-14}\n",
-    "\\label{dis_H2O} \\tag{3}\n",
-    "\\end{equation*}\n",
+    "$$K_W = \\frac{a_{H^+} \\cdot a_{OH^-}}{a_{H_2O}} = 10^{-14}$$ (eq3)\n",
     "\n",
-    "\\begin{equation*} \n",
-    " m_{H^+} = m_{HCO_{3}^{-}} + 2m_{CO_{3}^{2-}} + m_{OH^-}\n",
-    "\\label{charge_balance} \\tag{4}\n",
-    "\\end{equation*}\n",
+    "$$m_{H^+} = m_{HCO_{3}^{-}} + 2m_{CO_{3}^{2-}} + m_{OH^-}$$ (eq4)\n",
     "\n",
     "$$K_H \\cdot pCO_2 = H_2CO_3^{* }$$\n",
     "\n",
-    "\\begin{equation*} \n",
-    "K_H = \\frac{a_{H_2CO_3^{* }}}{P_{CO_2}} \\quad \\longrightarrow \\quad a_{H_2CO_3^{* }} = K_H \\cdot P_{CO_2}\n",
-    "\\label{Henry_H2CO3*} \\tag{5*}\n",
-    "\\end{equation*}\n",
+    "$$K_H = \\frac{a_{H_2CO_3^{* }}}{P_{CO_2}} \\quad \\longrightarrow \\quad a_{H_2CO_3^{* }} = K_H \\cdot P_{CO_2}$$ (eq6star)\n",
     "\n",
-    "Substituting $\\eqref{Henry_H2CO3*}$ into $\\eqref{dis_H2CO3*}$, and rearranging, we get:\n",
+    "Substituting {eq}`eq6star` into {eq}`eq1star`, and rearranging, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "a_{HCO_{3}^{-}} = \\frac{K_1 \\cdot K_H \\cdot P_{CO_2}}{a_{H^+}}\n",
-    "\\label{a_HCO3} \\tag{d}\n",
-    "\\end{equation*}\n",
+    "$$a_{HCO_{3}^{-}} = \\frac{K_1 \\cdot K_H \\cdot P_{CO_2}}{a_{H^+}}$$ (eqd)\n",
     "\n",
-    "Substituting $\\eqref{a_HCO3}$ into $\\eqref{dis_HCO3}$, and rearranging, we get:\n",
+    "Substituting {eq}`eqa` into {eq}`eq2`, and rearranging, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "a_{CO_{3}^{2-}} = \\frac{K_2 \\cdot K_1 \\cdot K_H \\cdot P_{CO_2}}{a_{H^+}^2}\n",
-    "\\label{a_CO3} \\tag{e}\n",
-    "\\end{equation*}\n",
+    "$$a_{CO_{3}^{2-}} = \\frac{K_2 \\cdot K_1 \\cdot K_H \\cdot P_{CO_2}}{a_{H^+}^2}$$ (eqe)\n",
     "\n",
-    "Rearranging $\\eqref{dis_H2O}$, we get:\n",
+    "Rearranging {eq}`eq3`, we get:\n",
     "\n",
-    "\\begin{equation*} \n",
-    "a_{OH^-} = \\frac{K_W}{a_{H^+}}\n",
-    "\\label{a_OH} \\tag{f}\n",
-    "\\end{equation*}\n",
+    "$$a_{OH^-} = \\frac{K_W}{a_{H^+}}$$ (eqf)\n",
     "\n",
-    "Applying $m_i = \\frac{a_i}{y_i}$ to $\\eqref{charge_balance}$, we get:\n",
+    "Applying $m_i = \\frac{a_i}{y_i}$ to {eq}`eq4`, we get:\n",
     "\n",
     "$$\\frac{a_{H^+}}{y_{H^+}} = \\frac{a_{HCO_{3}^{-}}}{y_{HCO_{3}^{-}}} + 2\\cdot\\frac{a_{CO_{3}^{2-}}}{y_{CO_{3}^{2-}}} + \\frac{a_{OH^-}}{y_{OH^-}}$$\n",
     "\n",
-    "Substituting $\\eqref{a_HCO3}$, $\\eqref{a_CO3}$ and $\\eqref{a_OH}$, we get:\n",
+    "Substituting {eq}`eqd`, {eq}`eqe` and {eq}`eqf`, we get:\n",
     "\n",
     "$$\\frac{1}{y_{H^+}} \\left(a_{H^+}\\right) = \\frac{1}{y_{HCO_{3}^{-}}} \\left(\\frac{K_1 \\cdot K_H \\cdot P_{CO_2}}{a_{H^+}}\\right) + \\cdot\\frac{2}{y_{CO_{3}^{2-}}} \\left(\\frac{K_2 \\cdot K_1 \\cdot K_H \\cdot P_{CO_2}}{a_{H^+}^2}\\right) + \\frac{1}{y_{OH^-}} \\left(\\frac{K_W}{a_{H^+}}\\right)$$\n",
     "\n",
@@ -388,7 +348,7 @@
     "\n",
     "1) $K_1>>K_2$\n",
     "\n",
-    "2) By $\\eqref{charge_balance}$, $m_{OH^-}<m_{H^+}$ in the presence of any $HCO_3^-$ or $CO_3^{2-}$\n",
+    "2) By {eq}`eq4`, $m_{OH^-}<m_{H^+}$ in the presence of any $HCO_3^-$ or $CO_3^{2-}$\n",
     "\n",
     "By the assumptions, the last two terms are then negligible, and the equation becomes:\n",
     "\n",
@@ -406,13 +366,13 @@
     "\n",
     "We can also find the activities of other species.\n",
     "\n",
-    "By $\\eqref{a_HCO3}$, $a_{HCO_{3}^{-}} = 10^{-5.61} \\,mol/kg$\n",
+    "By {eq}`eqd`, $a_{HCO_{3}^{-}} = 10^{-5.61} \\,mol/kg$\n",
     "\n",
-    "By $\\eqref{a_CO3}$, $a_{CO_{3}^{2-}} = 10^{-10.33} \\,mol/kg$\n",
+    "By {eq}`eqe`, $a_{CO_{3}^{2-}} = 10^{-10.33} \\,mol/kg$\n",
     "\n",
-    "By $\\eqref{a_OH}$, $a_{OH^{-}} = 10^{-8.39} \\,mol/kg$\n",
+    "By {eq}`eqf`, $a_{OH^{-}} = 10^{-8.39} \\,mol/kg$\n",
     "\n",
-    "By $\\eqref{Henry_H2CO3*}$, $a_{H_2CO_3^{* }} = 10^{-4.86} \\,mol/kg$\n"
+    "By {eq}`eq5star`, $a_{H_2CO_3^{* }} = 10^{-4.86} \\,mol/kg$\n"
    ]
   },
   {
@@ -425,11 +385,11 @@
     "\n",
     "Taking negative 10-base log, we get:\n",
     "\n",
-    "\\begin{align} \n",
-    "-\\log(a_{H^+}^2) &= -log(K_1 \\cdot K_H \\cdot P_{CO_2}) \\\\ \n",
-    "2 \\cdot pH &= pK_1 + pK_H - \\log P_{CO_2} \\\\\n",
-    "pH &= -\\frac{1}{2}\\log P_{CO_2} + c\n",
-    "\\end{align}\n",
+    "$$-\\log(a_{H^+}^2) = -log(K_1 \\cdot K_H \\cdot P_{CO_2})$$\n",
+    "\n",
+    "$$2 \\cdot pH = pK_1 + pK_H - \\log P_{CO_2}$$\n",
+    "\n",
+    "$$pH = -\\frac{1}{2}\\log P_{CO_2} + c$$\n",
     "\n",
     "where $c = \\frac{pK_1 + pK_H}{2}$\n",
     "\n",
@@ -438,16 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20e88c70340>"
+       "<matplotlib.legend.Legend at 0x1fd60c6b850>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,63 +465,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_22de9_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >T (C)</th>        <th class=\"col_heading level0 col1\" >pK1</th>        <th class=\"col_heading level0 col2\" >pK2</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_5160d_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >T (C)</th>        <th class=\"col_heading level0 col1\" >pK1</th>        <th class=\"col_heading level0 col2\" >pK2</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_22de9_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "                        <td id=\"T_22de9_row0_col1\" class=\"data row0 col1\" >6.58</td>\n",
-       "                        <td id=\"T_22de9_row0_col2\" class=\"data row0 col2\" >10.63</td>\n",
+       "                                <td id=\"T_5160d_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "                        <td id=\"T_5160d_row0_col1\" class=\"data row0 col1\" >6.58</td>\n",
+       "                        <td id=\"T_5160d_row0_col2\" class=\"data row0 col2\" >10.63</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row1_col0\" class=\"data row1 col0\" >5</td>\n",
-       "                        <td id=\"T_22de9_row1_col1\" class=\"data row1 col1\" >6.52</td>\n",
-       "                        <td id=\"T_22de9_row1_col2\" class=\"data row1 col2\" >10.55</td>\n",
+       "                                <td id=\"T_5160d_row1_col0\" class=\"data row1 col0\" >5</td>\n",
+       "                        <td id=\"T_5160d_row1_col1\" class=\"data row1 col1\" >6.52</td>\n",
+       "                        <td id=\"T_5160d_row1_col2\" class=\"data row1 col2\" >10.55</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row2_col0\" class=\"data row2 col0\" >10</td>\n",
-       "                        <td id=\"T_22de9_row2_col1\" class=\"data row2 col1\" >6.46</td>\n",
-       "                        <td id=\"T_22de9_row2_col2\" class=\"data row2 col2\" >10.49</td>\n",
+       "                                <td id=\"T_5160d_row2_col0\" class=\"data row2 col0\" >10</td>\n",
+       "                        <td id=\"T_5160d_row2_col1\" class=\"data row2 col1\" >6.46</td>\n",
+       "                        <td id=\"T_5160d_row2_col2\" class=\"data row2 col2\" >10.49</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row3_col0\" class=\"data row3 col0\" >15</td>\n",
-       "                        <td id=\"T_22de9_row3_col1\" class=\"data row3 col1\" >6.42</td>\n",
-       "                        <td id=\"T_22de9_row3_col2\" class=\"data row3 col2\" >10.43</td>\n",
+       "                                <td id=\"T_5160d_row3_col0\" class=\"data row3 col0\" >15</td>\n",
+       "                        <td id=\"T_5160d_row3_col1\" class=\"data row3 col1\" >6.42</td>\n",
+       "                        <td id=\"T_5160d_row3_col2\" class=\"data row3 col2\" >10.43</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row4_col0\" class=\"data row4 col0\" >20</td>\n",
-       "                        <td id=\"T_22de9_row4_col1\" class=\"data row4 col1\" >6.38</td>\n",
-       "                        <td id=\"T_22de9_row4_col2\" class=\"data row4 col2\" >10.38</td>\n",
+       "                                <td id=\"T_5160d_row4_col0\" class=\"data row4 col0\" >20</td>\n",
+       "                        <td id=\"T_5160d_row4_col1\" class=\"data row4 col1\" >6.38</td>\n",
+       "                        <td id=\"T_5160d_row4_col2\" class=\"data row4 col2\" >10.38</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row5_col0\" class=\"data row5 col0\" >25</td>\n",
-       "                        <td id=\"T_22de9_row5_col1\" class=\"data row5 col1\" >6.35</td>\n",
-       "                        <td id=\"T_22de9_row5_col2\" class=\"data row5 col2\" >10.33</td>\n",
+       "                                <td id=\"T_5160d_row5_col0\" class=\"data row5 col0\" >25</td>\n",
+       "                        <td id=\"T_5160d_row5_col1\" class=\"data row5 col1\" >6.35</td>\n",
+       "                        <td id=\"T_5160d_row5_col2\" class=\"data row5 col2\" >10.33</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row6_col0\" class=\"data row6 col0\" >30</td>\n",
-       "                        <td id=\"T_22de9_row6_col1\" class=\"data row6 col1\" >6.33</td>\n",
-       "                        <td id=\"T_22de9_row6_col2\" class=\"data row6 col2\" >10.29</td>\n",
+       "                                <td id=\"T_5160d_row6_col0\" class=\"data row6 col0\" >30</td>\n",
+       "                        <td id=\"T_5160d_row6_col1\" class=\"data row6 col1\" >6.33</td>\n",
+       "                        <td id=\"T_5160d_row6_col2\" class=\"data row6 col2\" >10.29</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row7_col0\" class=\"data row7 col0\" >45</td>\n",
-       "                        <td id=\"T_22de9_row7_col1\" class=\"data row7 col1\" >6.29</td>\n",
-       "                        <td id=\"T_22de9_row7_col2\" class=\"data row7 col2\" >10.20</td>\n",
+       "                                <td id=\"T_5160d_row7_col0\" class=\"data row7 col0\" >45</td>\n",
+       "                        <td id=\"T_5160d_row7_col1\" class=\"data row7 col1\" >6.29</td>\n",
+       "                        <td id=\"T_5160d_row7_col2\" class=\"data row7 col2\" >10.20</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_22de9_row8_col0\" class=\"data row8 col0\" >60</td>\n",
-       "                        <td id=\"T_22de9_row8_col1\" class=\"data row8 col1\" >6.29</td>\n",
-       "                        <td id=\"T_22de9_row8_col2\" class=\"data row8 col2\" >10.14</td>\n",
+       "                                <td id=\"T_5160d_row8_col0\" class=\"data row8 col0\" >60</td>\n",
+       "                        <td id=\"T_5160d_row8_col1\" class=\"data row8 col1\" >6.29</td>\n",
+       "                        <td id=\"T_5160d_row8_col2\" class=\"data row8 col2\" >10.14</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x20e88cd9040>"
+       "<pandas.io.formats.style.Styler at 0x1fd60ce72e0>"
       ]
      },
      "metadata": {},
@@ -588,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -674,12 +634,13 @@
     "\n",
     "We can simplify by taking the log on both sides. \n",
     "\n",
-    "\\begin{align} \n",
-    "\\log P_{CO_2} &= \\log \\left( \\frac{a_{HCO_{3}^{-}} \\cdot 10^{-pH}}{K_1 \\cdot K_H} \\right) \\\\\n",
-    "&= -pH + pK_1 + pK_H + \\log a_{HCO_{3}^{-}} \\\\ \n",
-    "&= -6.84+6.35+1.47+\\log(7.54\\cdot10^{-3}) \\\\\n",
-    "&= -1.14\n",
-    "\\end{align} \n",
+    "$$\\log P_{CO_2} = \\log \\left( \\frac{a_{HCO_{3}^{-}} \\cdot 10^{-pH}}{K_1 \\cdot K_H} \\right)$$\n",
+    "\n",
+    "$$= -pH + pK_1 + pK_H + \\log a_{HCO_{3}^{-}}$$\n",
+    "\n",
+    "$$= -6.84+6.35+1.47+\\log(7.54\\cdot10^{-3})$$\n",
+    "\n",
+    "$$= -1.14$$ \n",
     "\n",
     "So, $P_{CO_2} = 10^{-1.14} = 72443\\,ppm$!\n",
     "\n",
