--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Defining_Activity_Coefficients.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Defining_Activity_Coefficients.ipynb
@@ -50,7 +50,7 @@
     "   \n",
     "In theory, to calculate $I$, one should need a full determination of the concentrations of all ions in solutions. However, **in practice, about 99% of dissolved materials in streams, lakes, aquifers and oceans are accounted by 10 elements!**\n",
     "\n",
-    "![](images/DAC1.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/DAC1.png\" style= \"width: 60%\"></p>\n",
     "\n",
     "$\\quad$Figure 1: \"Analysis and Calculated ionic strengths of some natural waters\" (Misra, 2012).\n",
     "\n",
@@ -66,10 +66,13 @@
     "\n",
     "Some assumptions underlying the Debye-Huckel (extended) model:\n",
     "\n",
-    "    (i) Electrolytes are completely dissociated into ions.\n",
-    "    (ii) Positive ions are surrounded by a cloud of negative charge and vice versa.\n",
-    "    (iii) Size of the ions do not vary with ionic strength.\n",
-    "    (iv) Interactions among aqueous species are fully electrostatic, excludes repulsion for ion of the same charge.\n",
+    "$\\quad$(i) Electrolytes are completely dissociated into ions.\n",
+    "\n",
+    "$\\quad$(ii) Positive ions are surrounded by a cloud of negative charge and vice versa.\n",
+    "\n",
+    "$\\quad$(iii) Size of the ions do not vary with ionic strength.\n",
+    "\n",
+    "$\\quad$(iv) Interactions among aqueous species are fully electrostatic, excludes repulsion for ion of the same charge.\n",
     "\n",
     "(3) Davies model (useful when $I \\leq 0.6\\,m$):\n",
     "\n",
@@ -101,7 +104,7 @@
     "   \n",
     "The figure below illustrates the environmental differences in ionic strength.\n",
     "\n",
-    "![](images/DAC2.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/DAC2.png\" style= \"width: 60%\"></p>\n",
     "\n",
     "$\\quad$Figure 2: The environmental differences in ionic strength (White, 2013).\n",
     "\n",
@@ -716,9 +719,11 @@
    "source": [
     "c) Compute the ion activity coefficients for $Ca^{2+}$ and $HCO_3^-$ using the values for the various constants from the data tables provided in the notes (these are from K. Misra’s book, chapter 7). Choose a temperature that is characteristic of London. \n",
     "\n",
-    "    (i) Use the Debye-Hueckel model.\n",
-    "    (ii) Use the Davies model.\n",
-    "    (iii) Use the Truesdell-Jones model.\n",
+    "$\\quad$(i) Use the Debye-Hueckel model.\n",
+    "\n",
+    "$\\quad$(ii) Use the Davies model.\n",
+    "\n",
+    "$\\quad$(iii) Use the Truesdell-Jones model.\n",
     "\n",
     "Let’s choose $T=15^\\circ C$, which is probably about the annual average temperature in London. "
    ]
