--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Rate_Law.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Rate_Law.ipynb
@@ -482,7 +482,7 @@
     "\n",
     "$$R = \\frac{d[Fe(II)]}{dt} = -\\frac{k_+[Fe^{2+}]}{[H^+]^2}P_{O_2} = -(1.2\\cdot10^{-11})\\cdot\\frac{(10^{-3})}{(10^{-7})^2}\\cdot(0.2) = -2.4\\cdot10^{-1}\\,\\frac{mol}{L\\cdot d}$$\n",
     "\n",
-    "We can find the relationship between pH and the reaction rate as both are related to $[H^+]$ as follows.\n",
+    "We can find the relationship between $pH$ and the reaction rate as both are related to $[H^+]$ as follows.\n",
     "\n",
     "Recall the given empirical rate law:\n",
     "\n",
@@ -498,7 +498,7 @@
     "\n",
     "$$R = -\\frac{K}{10^{-2pH}}$$\n",
     "\n",
-    "From the relationship, it can be seen that increasing pH for this reaction can affect the rate by orders of magnitude, as depicted in the plot below. Note that the <u>negative sign</u>, which means that $[Fe(II)]$ experiences a <u>decrease</u>, will be omitted."
+    "From the relationship, it can be seen that increasing $pH$ for this reaction can affect the rate by orders of magnitude, as depicted in the plot below. Note that the <u>negative sign</u>, which means that $[Fe(II)]$ experiences a <u>decrease</u>, will be omitted."
    ]
   },
   {
