--- a/notebooks/d_geosciences/Miscellaneous/Isostasy.ipynb
+++ b/notebooks/d_geosciences/Miscellaneous/Isostasy.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "According to Archimedes’ principle, if a lower density object is placed in a liquid with a higher density it will sink into that liquid until the weight of the liquid displaced by the object is equal to the weight of object (see below), in other words so that the weight of the object is equal to the weight of the water displaced and the buoyancy force ($F_B$ in the diagram below) is equal to the object weight ($F_o$).\n",
     "\n",
-    "![](images/Figure_2_1.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_1.png\" style= \"width: 70%\"></p>\n",
     "\n",
     "$\\qquad$Figure 1: Illustration of Archimedes principle. An object of density $\\rho_S$ is placed in a liquid of density $\\rho_L$. It sinks into the liquid until a volume $\\Delta V$ of the object is below the liquid level. The liquid in this diagram is in a container so and the liquid consequently rises as shown by the shading.\n",
     "\n",
@@ -51,15 +51,15 @@
     "\n",
     "If the relatively rigid outer region of the Earth (the lithosphere) is assumed to be composed of a number of blocks that can move independently in a vertical direction, then local isostatic equilibrium is possible. This is generally a good approximation when comparing regions that are weak or that are a few hundred kilometres or more in lateral extent.\n",
     "\n",
-    "![](images/Figure_2_2.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_2.png\" style= \"width: 70%\"></p>\n",
     "\n",
-    "    Figure 2: The concept of local isostasy and reality.\n",
+    "$\\qquad$Figure 2: The concept of local isostasy and reality.\n",
     "    \n",
     "If a region is in local isostatic equilibrium, then the pressure at some depth below it (the compensation depth) will be everywhere equal, and the weight of a column of unit area above the <u>*compensation depth*</u> will everywhere be equal. For example, a simple model of the continent and ocean will give:\n",
     "\n",
-    "![](images/Figure_2_3.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_3.png\" style= \"width: 40%\"></p>\n",
     "\n",
-    "    Figure 3: Compensation depth.\n",
+    "$\\qquad$Figure 3: Compensation depth.\n",
     "\n",
     "Here, the pressure at the compensation depth is equal so that $p_1 = p_2$. Above the compensation depth, the weight per unit area of the continental crust and mantle on the left hand side is equal to the weight per unit area of the ocean, oceanic crust and mantle on the right hand side. If this were not true, then one block would rise or sink relative to the other until it became true.\n",
     "\n",
@@ -236,10 +236,10 @@
     "   * Depth of ocean ($b$) = $5000\\,m$   \n",
     "   * Thickness of ocean crust ($c$) = $7000\\,m$   \n",
     "   * Depth of the base of continental crust below sea level ($a$) = $35000\\,m$\n",
-    "   \n",
-    "![](images/Figure_2_4.png)\n",
     "\n",
-    "    Figure 4: Simplified cross section through a passive continental margin.\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_4.png\" style= \"width: 50%\"></p>\n",
+    "\n",
+    "$\\qquad$Figure 4: Simplified cross section through a passive continental margin.\n",
     "    \n",
     "<u>Solution</u>:\n",
     "\n",
@@ -291,9 +291,9 @@
     "\n",
     "The first step in any problem like this is to draw a diagram, label any thicknesses and densities that are known, and use symbols for any that need to be found. Often there will be simple relationships between unknown thicknesses; include these on the diagram. In this problem, if the height of the top of the left-hand crustal block above the right is $x$ km, then the offset of the base of the block will be $35 − x − 30 = 5 − x$ as shown. \n",
     "\n",
-    "![](images/Figure_2_5.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_5.png\" style= \"width: 40%\"></p>\n",
     "\n",
-    "    Figure 5: Simplified cross section through two blocks of crust sit adjacent to each other in local isostatic equilibrium.\n",
+    "$\\qquad$Figure 5: Simplified cross section through two blocks of crust sit adjacent to each other in local isostatic equilibrium.\n",
     "    \n",
     "By mass balance, we can use our solver to find $x$."
    ]
@@ -328,7 +328,7 @@
     "\n",
     "The crust is $33\\,km$ thick with a density of $2800\\,kg\\,m^{−3}$. A collision between two continents occurs in which this crust is thrust over an equivalent thickness of crust on another continent. How high is the resultant plateau assuming a mantle density of $3300\\,kg\\,m^{−3}$ and that local isostasy pertains? This is approximately the situation today in Tibet.\n",
     "\n",
-    "![](images/Figure_2_6.png)"
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_6.png\" style= \"width: 60%\"></p>"
    ]
   },
   {
@@ -364,11 +364,11 @@
     "\n",
     "$33\\,km$ of material were added to the thickness of the crust to produce a net uplift at the surface of only $5\\,km$. Clearly then, to remove 5 km of uplift, a thickness equivalent to that of the added material must be removed; that is we need to erode a total thickness of $33\\,km$.\n",
     "\n",
-    "![](images/Figure_2_7.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_7.png\" style= \"width: 60%\"></p>\n",
     "\n",
     "Now to answer the question properly from scratch.\n",
     "\n",
-    "![](images/Figure_2_8.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_2_8.png\" style= \"width: 60%\"></p>\n",
     "\n",
     "Note that we do not know the thickness of the blocks, so we introduce $x$ and $y$ as unknowns.\n",
     "\n",
