--- a/notebooks/d_geosciences/Miscellaneous/Seafloor_ages.ipynb
+++ b/notebooks/d_geosciences/Miscellaneous/Seafloor_ages.ipynb
@@ -16,33 +16,28 @@
     "```\n",
     "The fundamental theory behind behaviour of the Earth's outer shell, the lithosphere, is called plate tectonics. The lithosphere is broken into multiple plates that interact at their boundaries. There are three types of this interaction: plates can converge, diverge or move along their boundaries.\n",
     "\n",
-    "```{figure} ../images/plate_boundaries.png\n",
-    ":width: 600px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/plate_boundaries.png\" style= \"width: 60%\"></p>\n",
     "\n",
     "### Mid-ocean ridges - the divergent boundary\n",
     "\n",
     "The divergent boundary was discovered in 1960s, as geophysicists discovered that new oceanic crust is formed at mid-ocean ridges. As the new oceanic crust is formed, the older crust is pushed away from the ridges and as it cools it becomes thicker and subsides.\n",
     "\n",
-    "The Earth's magnetic field is not constant over time. On average, 4 or 5 magnetic reversals happen within 1 million years. These reversals are recorded on the seafloor as new rocks produced at mid-ocean ridges have magnetite aligned with magnetic field as they cool on the surface:\n",
+    "The Earth's magnetic field is not constant over time. On average, $4$ or $5$ magnetic reversals happen within $1$ million years. These reversals are recorded on the seafloor as new rocks produced at mid-ocean ridges have magnetite aligned with magnetic field as they cool on the surface:\n",
     "\n",
-    "```{figure} ../images/magnetic_field_seafloor.png\n",
-    ":width: 600px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/magnetic_field_seafloor.png\" style= \"width: 60%\"></p>\n",
     "\n",
-    "Magnetic anomalies can tell us about the age of the seafloor. These anomalies have been very well mapped across the world and dating techniques such as radioactive decay of Potassium and Argon make their age estimates very precise. As seen on the picture below, the Bruhnes is the latest magnetic reversal that happened ~800,000 years ago:\n",
+    "Magnetic anomalies can tell us about the age of the seafloor. These anomalies have been very well mapped across the world and dating techniques such as radioactive decay of Potassium and Argon make their age estimates very precise. As seen on the picture below, the Bruhnes is the latest magnetic reversal that happened ~$800,000$ years ago:\n",
     "\n",
-    "```{figure} ../images/magnetic_anomalies.png\n",
-    ":width: 600px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/magnetic_anomalies.png\" style= \"width: 60%\"></p>\n",
+    "\n",
     "## Exercise\n",
     "### Seafloor age vs. depth relationship\n",
     "\n",
-    "Parsons & Sclater (1977) provide a relationship between seafloor age $t$ (Ma) and depth $d(t)$:\n",
+    "Parsons & Sclater (1977) provide a relationship between seafloor age $t$ ($Ma$) and depth $d(t)$:\n",
     "\n",
     "$$d(t) = 2500 + 350\\times t^{1/2},$$\n",
     "\n",
-    "where $0 < t < 70$ Ma. In this exercise we will test this relationship on real data and check how it behaves for seafloor older than 70 Ma.\n",
+    "where $0 < t < 70$ $Ma$. In this exercise we will test this relationship on real data and check how it behaves for seafloor older than $70\\,Ma$.\n",
     "\n",
     "Before we jump to the exercise, let's load all necessary libraries:"
    ]
@@ -135,9 +130,7 @@
    "source": [
     "The dataset is really large, therefore, we will only display the end result here. Note how easily we can pick out the position of Mid-Atlantic ridge tracing the youngest rocks (red colours) in the Atlantic. The oldest rocks are coloured in magenta and occur at the continental margins and in the Pacific.\n",
     "\n",
-    "```{figure} ../images/Mueller_2008_map.png\n",
-    ":width: 600px\n",
-    "```"
+    "<p style=\"text-align:center;\"><img src=\"images/Mueller_2008_map.png\" style= \"width: 60%\"></p>\n"
    ]
   },
   {
@@ -521,11 +514,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see on the graph, curve for ages below 70 Ma fits the ETOPO1 data reasonably well, as equation predicts. However, let's quantify the root mean square error for the dataset:\n",
+    "As we can see on the graph, curve for ages below $70\\,Ma$ fits the ETOPO1 data reasonably well, as equation predicts. However, let's quantify the root mean square error for the dataset:\n",
     "\n",
-    "$$ RMS\\ Error = \\sqrt{\\frac{\\sum_{i=1}^{n} (\\text{predicted value}- \\text{observed value})^2}{n}} $$,\n",
+    "$$ \\text{RMS Error} = \\sqrt{\\frac{\\sum_{i=1}^{n} (\\text{predicted value}- \\text{observed value})^2}{n}} $$,\n",
     "\n",
-    "where n is the number of samples.\n",
+    "where $n$ is the number of samples.\n",
     "\n",
     "Since the age and depth measurements in the two datasets are not done at exactly the same distances, we need to interpolate one dataset and compare the overlapping positions."
    ]
@@ -588,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have our RMS error, we can calculate how many samples are within one and two RMS errors. The expected values should be around 68% and 95%:"
+    "Now that we have our RMS error, we can calculate how many samples are within one and two RMS errors. The expected values should be around $68\\%$ and $95\\%$:"
    ]
   },
   {
@@ -652,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data is a 2D array with 3011 rows and 4752 columns. It is also a numpy array. We can apply the equation on the whole array to create a new array. However, we should only use the parts where elevation is below 0 m. In order to do that, we need to mask _elev_ array:"
+    "The data is a 2D array with $3011$ rows and $4752$ columns. It is also a numpy array. We can apply the equation on the whole array to create a new array. However, we should only use the parts where elevation is below 0 m. In order to do that, we need to mask _elev_ array:"
    ]
   },
   {
@@ -782,11 +775,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparing real seafloor age and age calculated based on depth, we can see that the relationship does not work for ages above 70 Ma. In the real age dataset, we can see that seafloor near continental margins is > 140 Ma old, while according to the equation from Parsons & Sclatter (1977), the seafloor there should be very young.\n",
+    "Comparing real seafloor age and age calculated based on depth, we can see that the relationship does not work for ages above $70\\,Ma$. In the real age dataset, we can see that seafloor near continental margins is older than $140\\,Ma$, while according to the equation from Parsons & Sclatter (1977), the seafloor there should be very young.\n",
     "\n",
-    "```{figure} ../images/seafloor_ages_north_atlantic_comparison.png\n",
-    ":width: 600px\n",
-    "```\n",
+    "<p style=\"text-align:center;\"><img src=\"images/seafloor_ages_north_atlantic_comparison.png\" style= \"width: 60%\"></p>\n",
     "\n",
     "## References\n",
     "* Material used in this notebook was based on plate tectonics lecture content of Dynamic Earth module at Earth Science and Engineering Department"
