--- a/notebooks/d_geosciences/Physical Processes/Dimensional_Analysis.ipynb
+++ b/notebooks/d_geosciences/Physical Processes/Dimensional_Analysis.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "## Units vs dimensions\n",
     "\n",
-    "Dimensions refer to types of physical properties that can be measured whilst units are the way we have chosen to assign a value or quantity to the amount of that variable, e.g. ‘length’ is a dimension whilst ‘m’ is the SI unit we have chosen to use to quantify length (our American colleagues might have chosen units of ‘feet’). \n",
+    "Dimensions refer to types of physical properties that can be measured whilst units are the way we have chosen to assign a value or quantity to the amount of that variable, e.g. ‘length’ is a dimension whilst ‘$m$’ is the SI unit we have chosen to use to quantify length (our American colleagues might have chosen units of ‘feet’). \n",
     "\n",
-    "Most physical quantities have associated units, for example a distance might be measured in metres, miles or light years. Although great care is needed when mixing units within a single equation, it is nonetheless meaningful to consider a length that is equal to a metre plus a foot, or to say that 10 centimetres is equal to 100 millimetres. In contrast, it is not physically meaningful to consider a quantity that is equal to a metre plus a kilogram, nor to say that 10 centimetres is equal to 100 grams.\n",
+    "Most physical quantities have associated units, for example a distance might be measured in metres, miles or light years. Although great care is needed when mixing units within a single equation, it is nonetheless meaningful to consider a length that is equal to a metre plus a foot, or to say that $10$ centimetres is equal to $100$ millimetres. In contrast, it is not physically meaningful to consider a quantity that is equal to a metre plus a kilogram, nor to say that $10$ centimetres is equal to $100$ grams.\n",
     "\n",
     "Equations relating physical quantities must be **dimensionally homogeneous**. That is, the dimensions (but not necessarily the units) must be the same:\n",
     "\n",
@@ -31,11 +31,11 @@
     "\n",
     "This simple idea often has far reaching consequences. In many cases, if we know the variables that are important in a physical system, then we can discover the form of the equations that relate them together using only information about their dimensions. \n",
     "\n",
-    "All physical quantities have dimensions and units derived from 7 base or primary physical quantities. Table 1 lists those quantities, the SI units and symbols and the symbols used for the dimensions of those quantities.\n",
+    "All physical quantities have dimensions and units derived from $7$ base or primary physical quantities. Table 1 lists those quantities, the SI units and symbols and the symbols used for the dimensions of those quantities.\n",
     "\n",
-    "![](images/Table_1_1.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Table_1_1.png\" style= \"width: 60%\"></p>\n",
     "\n",
-    "        Table 1: Base quantities, SI units and symbols for dimensions\n",
+    "$\\qquad$Table 1: Base quantities, SI units and symbols for dimensions\n",
     "\n",
     "## Specifying dimensions\n",
     "\n",
@@ -97,11 +97,11 @@
     "\n",
     "where $k$ is a constant that does not have any dimensions.\n",
     "\n",
-    "Dimensional analysis on its own cannot tell us anything about the value of the constant $k$: this depends upon our choice of units. The advantage of using the SI system of units is that this system has been designed so that for most equations $k~1$. That is, they may be equal for example to $1/2$ or $\\pi^{2}$, but are unlikely to be equal to $10^{7}$. In many problems, including the one above, the value of the constant is 1. There are, however, certain fundamental physical constants that are very different from 1, even when using SI units. These constants are believed to be universal (literally) in nature and in time. Table 2 lists the constants you are most likely to encounter in your studies together with their values in SI and units.\n",
+    "Dimensional analysis on its own cannot tell us anything about the value of the constant $k$: this depends upon our choice of units. The advantage of using the SI system of units is that this system has been designed so that for most equations $k~1$. That is, they may be equal for example to $1/2$ or $\\pi^{2}$, but are unlikely to be equal to $10^{7}$. In many problems, including the one above, the value of the constant is $1$. There are, however, certain fundamental physical constants that are very different from $1$, even when using SI units. These constants are believed to be universal (literally) in nature and in time. Table 2 lists the constants you are most likely to encounter in your studies together with their values in SI and units.\n",
     "\n",
-    "![](images/Table_1_2.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Table_1_2.png\" style= \"width: 60%\"></p>\n",
     "\n",
-    "        Table 2: Universal physical constants, symbol and values in SI (with units).\n",
+    "$\\qquad$Table 2: Universal physical constants, symbol and values in SI (with units).\n",
     "\n",
     "You may find that you can solve simple problems without writing out the indicial equations explicitly and solving them, but in general try to solve the problem formally anyway because an intuitive approach will become increasingly difficult with more complicated problems. \n",
     "\n",
@@ -112,7 +112,7 @@
     "\n",
     "Dimensionless numbers and dimensionless variables play an important role in aiding our understanding of physical problems and are important in designing scale models and in parameterising experiments.\n",
     "\n",
-    "The Buckingham pi theorem states that any physical problem that can be described by $N$ variables using $n$ dimensions (in other words $n$ types of physical quantities, not the number of spatial dimensions!) can also be described using only $N – n$ dimensionless variables. \n",
+    "The *Buckingham pi theorem* states that any physical problem that can be described by $N$ variables using $n$ dimensions (in other words $n$ types of physical quantities, not the number of spatial dimensions!) can also be described using only $N – n$ dimensionless variables. \n",
     "\n",
     "\n",
     "## Dimensions of angles, vectors, differentials, integrals, functions\n",
@@ -177,7 +177,7 @@
     "\n",
     "You should recover a result that you may already know for the magnitude of centripetal force. Check that your final answer is indeed dimensionally homogeneous.\n",
     "\n",
-    "In this problem, the constant k is equal to one if the orbit is circular. "
+    "In this problem, the constant $k$ is equal to one if the orbit is circular. "
    ]
   },
   {
