--- a/notebooks/d_geosciences/Physical Processes/Fluids_&_the_Bernoulli_effect.ipynb
+++ b/notebooks/d_geosciences/Physical Processes/Fluids_&_the_Bernoulli_effect.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "   * the pressure is the same over any horizontal surface; \n",
     "   * the force due to the fluid pressure is perpendicular to any surface with which the fluid is in contact; \n",
-    "   * within the body of the fluid, the force due to fluid pressure is the same in all directions (isotropy).4\n",
+    "   * within the body of the fluid, the force due to fluid pressure is the same in all directions (isotropy).\n",
     "   \n",
     "In a fluid with constant density $\\rho$, the pressure at depth h below the surface is:\n",
     "\n",
@@ -38,15 +38,14 @@
     "```\n",
     "\n",
     "1) Smooth flow, such that neighbouring layers of the fluid slide past each other smoothly. This is **laminar flow**. The picture below on the left, of the River Derwent, Yorkshire, provides a typical example. The river flow is said to be steady.\n",
+    "\n",
     "2) **Turbulent** flow, in contrast to laminar flow, is characterised by erratic, small whirlpoollike flow, often in circles or eddies as illustrated below in the picture on the right.\n",
     "\n",
-    "![](images/Figure_4_1.png)\n",
-    "\n",
-    "        Figure 1: An example of laminar (left) and turbulent (right) flows.\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_4_1.png\" style= \"width: 60%\"></p>\n",
     "        \n",
     "A stream-tube is a collection of neighbouring streamlines. For incompressible fluid, by conservation of mass, the area of a cross-section of the stream-tube times the average velocity is constant.\n",
     "\n",
-    "![](images/Figure_4_2.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_4_2.png\" style= \"width: 30%\"></p>\n",
     "\n",
     "To understand this result, consider the fluid at point 1 occupying the volume $A_{1}\\Delta l_{1}$ which will flow to point 2 of section $A_{2}$ and occupy the volume $A_{2}\\Delta l_{2}$. Since the fluid does not change its density, the mass of fluid m in the two volumes and thus the two volumes, $A_{1}\\Delta l_{1}$ and $A_{2}\\Delta l_{2}$, must be equal. Equivalently, if the velocities at points 1 and 2 are $v_{1}$ and $v_{2}$ , the distance $\\Delta l_{1}$ and $\\Delta l_{2}$ have been crossed during the same time increment. Consequently, incompressibility also implies that $A_{1}v_{1}$ is equal to $A_{2}v_{2}$.\n",
     "\n",
@@ -58,13 +57,13 @@
     "\n",
     "Three types of energy need to be considered to obtain Bernouilli’s equation:\n",
     "\n",
-    "   * kinetic energy associated with the movement of the fluid ($\\frac{1}{2}mv^{2}$)\n",
+    "   * kinetic energy associated with the movement of the fluid $\\left(\\frac{1}{2}mv^{2}\\right)$\n",
     "   * gravitational potential energy associated with changes in height ($\\rho gh$)\n",
-    "   * work done by pressure forces ($force × distance\\,moved$)\n",
+    "   * work done by pressure forces ($\\text{force} × \\text{distance moved}$)\n",
     "\n",
     "Consider the balance of energy when a fluid moves from section 1 to section 2.\n",
     "\n",
-    "![](images/Figure_4_3.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_4_3.png\" style= \"width: 40%\"></p>\n",
     "\n",
     "The work done, $W_{1}$, to push the fluid into the region at point 1 is the force times the distance moved, $W_{1} = P_{1} A_{1} \\Delta l_{1}$.\n",
     "\n",
@@ -102,7 +101,7 @@
     "\n",
     "        These conditions apply to flow through a small exit from a large chamber where both the exit and the top of the chamber are at the same external pressure. \n",
     "        \n",
-    "        ![](images/Figure_4_4.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_4_4.png\" style= \"width: 30%\"></p>\n",
     "\n",
     "        Note that the velocity at which the fluid exits the chamber is the same velocity as that of an object falling under gravity from the top of the chamber. \n",
     "\n",
@@ -111,9 +110,9 @@
     "\n",
     "Bernoulli’s equation has lots of consequences and applications. It describes the process that enables yachts to sail into the wind, aeroplanes to fly, free kicks to bend into goal, and perfume sprays to work. It also describes the process by which sediments are lifted from a river-bed by a current, and dust is lifted into the air by powerful winds. Two of these applications are described below.\n",
     "\n",
-    "![](images/Figure_4_5.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_4_5.png\" style= \"width: 50%\"></p>\n",
     "\n",
-    "1) The figure above is a schematic representation of the Venturi effect which is a can be described by applying the Bernouilli equation to a constriction in a tube (see diagram above). The manometer to the left, with the column height h1, measures the static pressure in section 1 (given by $p_{1} = \\rho gh_{1}$. The tube to the right, in the constriction (section 2), also measures the static pressure (given by $p_{2} = \\rho gh_{2}$) . Since the potential energy is negligible in this problem, Bernouilli’s equation becomes:\n",
+    "1) The figure above is a schematic representation of the Venturi effect which is a can be described by applying the Bernouilli equation to a constriction in a tube (see diagram above). The manometer to the left, with the column height $h_1$, measures the static pressure in section 1 (given by $p_{1} = \\rho gh_{1}$. The tube to the right, in the constriction (section 2), also measures the static pressure (given by $p_{2} = \\rho gh_{2}$) . Since the potential energy is negligible in this problem, Bernouilli’s equation becomes:\n",
     "\n",
     "$$\\frac{1}{2}v_{1}^{2} + gh_{1} = \\frac{1}{2}v_{2}^{2} + gh_{2}$$\n",
     "\n",
@@ -131,9 +130,9 @@
     "    \n",
     "For a spherical particle of radius $r$ and density $\\rho_{s}$, in a fluid flowing at a velocity of $v$ with a density of $\\rho_{f}$, the two forces are:\n",
     "\n",
-    "$$F_{downward} = weight − buoyancy = \\frac{4}{3} \\pi r^{3} (\\rho_{s} - \\rho_{f}) g$$\n",
+    "$$F_{\\text{downward}} = \\text{weight} − \\text{buoyancy} = \\frac{4}{3} \\pi r^{3} (\\rho_{s} - \\rho_{f}) g$$\n",
     "\n",
-    "$$F_{upward} = dynamic\\,pressure × cross\\,sectional\\,area = \\frac{1}{2} \\rho_{f} v^{2} \\pi r^{2}$$\n",
+    "$$F_{\\text{upward}} = \\text{dynamic pressure} × \\text{cross sectional area} = \\frac{1}{2} \\rho_{f} v^{2} \\pi r^{2}$$\n",
     " \n",
     "When these two are equal, then the particle will be on the verge of rising into the flow."
    ]
@@ -184,9 +183,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A sugar grain is maybe 1 mm diameter. It’s density is about 1000 $kg\\,m^{-3}$ (similar to water). \n",
+    "A sugar grain is maybe $1\\,mm$ diameter. It’s density is about $1000\\,kg\\,m^{-3}$ (similar to water). \n",
     "\n",
-    "The density of air is about 1.3 $kg\\,m^{-3}$.\n",
+    "The density of air is about $1.3\\,kg\\,m^{-3}$.\n",
     "\n",
     "The downward force on a grain is just its weight $mg \\sim 10^{-9} × 1000 × 10 = 10^{-5}\\,N$\n",
     "\n",
@@ -222,9 +221,9 @@
     "   \n",
     "So balance the gravitational force minus the buoyancy against the lift due to the flow.\n",
     "\n",
-    "$$gravitational\\,force - buoyancy = volume × reduced\\,density × g = \\frac{4}{3} \\pi r^{3} (\\rho - \\rho_{w}) g$$\n",
+    "$$\\text{gravitational force} - \\text{buoyancy} = \\text{volume} × \\text{reduced density} × g = \\frac{4}{3} \\pi r^{3} (\\rho - \\rho_{w}) g$$\n",
     "\n",
-    "$$lift = pressure × area = \\frac{1}{2} \\rho_{w} v^{2} × \\pi r^{2}$$.\n",
+    "$$\\text{lift} = \\text{pressure} × \\text{area} = \\frac{1}{2} \\rho_{w} v^{2} × \\pi r^{2}$$.\n",
     "\n",
     "Set these equal and solve for $v$ with $\\rho \\approx 2800\\,kg\\,m^{-3}$, $\\rho_{w} = 1000\\,kg\\,m^{-3}$, $g \\approx 10\\,m\\,s^{-2}$"
    ]
