--- a/notebooks/d_geosciences/Physical Processes/Reynolds_number.ipynb
+++ b/notebooks/d_geosciences/Physical Processes/Reynolds_number.ipynb
@@ -20,9 +20,9 @@
     "\n",
     "There are two fundamental planar laminar flows called the Couette and the Poiseuille flows, represented in the Figure 1 below. In the Couette flow, to the left, the upper plate (in yellow) is displaced with the velocity $V_{max}$ with respect to the lower plate. The velocity profile is linear in the fluid flowing between the two plates, with a zero velocity at the contact of the lower plate and a maximum velocity at the top plate. The flow is driven by the relative velocity of the two bounding plates. For the Poiseuille flow, Figure above to the right, the two bounding plates are at rest. The flow is driven by the difference in pressure between the entrance and the exit separated by the distance $l$. The velocity profile in the fluid is parabolic with a zero velocity at the contact of the two bounding plates and a maximum at the centre. These two flows have many applications in the Earth Sciences and in Engineering.\n",
     "\n",
-    "![](images/Figure_5_1.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_5_1.png\" style= \"width: 60%\"></p>\n",
     "\n",
-    "        Figure 1: Couette (left) and Poiseuille (right) flows\n",
+    "$\\qquad$Figure 1: Couette (left) and Poiseuille (right) flows\n",
     "\n",
     "## Viscosity\n",
     "```{index} Viscosity\n",
@@ -36,7 +36,7 @@
     "\n",
     "$$\\left(\\frac{F}{A}\\right) = \\eta \\left(\\frac{V_{max}}{h}\\right)$$\n",
     "\n",
-    "in which the constant $\\eta$ is called the viscosity. This material property has the unit of $Pa\\,s$. If the viscosity is a constant and thus not sensitive to the temperature and the strain rate, the fluid is said to be Newtonian.\n",
+    "in which the constant $\\eta$ is called the viscosity. This material property has the unit of $\\text{Pa s}$. If the viscosity is a constant and thus not sensitive to the temperature and the strain rate, the fluid is said to be Newtonian.\n",
     "\n",
     "## Reynolds number and drag coefficient\n",
     "```{index} Drag coefficient\n",
@@ -52,17 +52,13 @@
     "\n",
     "Reynolds number: \n",
     "\n",
-    "\\begin{equation}\n",
-    "Re = \\frac{\\rho_{f}vd}{\\eta}\n",
-    "\\end{equation}\n",
+    "$$Re = \\frac{\\rho_{f}vd}{\\eta}$$\n",
     "\n",
     "Drag coefficient: \n",
     "\n",
-    "\\begin{equation}\n",
-    "C_{D} = \\frac{2F}{\\rho_{f}v^{2}A}\n",
-    "\\end{equation}\n",
+    "$$C_{D} = \\frac{2F}{\\rho_{f}v^{2}A}$$\n",
     "\n",
-    "For historical reasons, the drag coefficient $C_{D}$ is defined including a factor of 2 and using the cross-sectional area $A$ of the particle rather than the diameter $d$, where of course $A \\sim d^{2}$. Drag coefficient and Reynolds number play a central role in the analysis of sediment transport by water and wind. \n",
+    "For historical reasons, the drag coefficient $C_{D}$ is defined including a factor of $2$ and using the cross-sectional area $A$ of the particle rather than the diameter $d$, where of course $A \\sim d^{2}$. Drag coefficient and Reynolds number play a central role in the analysis of sediment transport by water and wind. \n",
     "\n",
     "Since this problem involves just two dimensionless variables, one of them can always be written as a function of the other, for example:\n",
     "\n",
@@ -88,13 +84,13 @@
     "\n",
     "where $d$ is the diameter and $r$ is the radius of the particle. This important relationship is called **Stokes’ Law**. Stokes’ law is valid only for **low Reynolds numbers**, that is for small particles moving slowly through high-viscosity fluids.\n",
     "\n",
-    "If the particles are not spheres, then the constant that relates $C_{D}$ and $Re$ will not be exactly equal to 24, but the same principles will apply. \n",
+    "If the particles are not spheres, then the constant that relates $C_{D}$ and $Re$ will not be exactly equal to $24$, but the same principles will apply. \n",
     "\n",
     "### Stokes flow\n",
     "\n",
     "The fluid flow associated with Stokes’ law, called Stokes flow, is laminar, smooth and steady so that, for an observer moving with the particle, successive situations will appear identical.\n",
     "\n",
-    "![](images/Figure_5_2.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_5_2.png\" style= \"width: 30%\"></p>\n",
     "\n",
     "In Stokes flow, the drag depends upon $v$ (rather than $v^{2}$ which is the case at higher velocities), and on $d$ (rather than on the cross-sectional area which is $\\sim d^{2}$). Note also that formulae may be written in terms of either the diameter $d$ or the radius $r$. \n",
     "\n",
@@ -146,19 +142,6 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# create our own functions"
    ]
   },
   {
@@ -267,7 +250,7 @@
     "\n",
     "During flow parallel to a boundary, one of the appropriate scale lengths is often the distance along the flow. Such flows tend to start out as laminar and then become turbulent down-flow as the Reynolds number increases.\n",
     "\n",
-    "![](images/Figure_5_3.png)"
+    "<p style=\"text-align:center;\"><img src=\"images/Figure_5_3.png\" style= \"width: 80%\"></p>"
    ]
   },
   {
