--- a/notebooks/d_geosciences/Remote Sensing/Image_Filtering.ipynb
+++ b/notebooks/d_geosciences/Remote Sensing/Image_Filtering.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "<p style=\"text-align:center;\"><img src=\"Data_Image_Filtering/convolution_graphical.png\" style= \"width: 30%\"></p>\n",
     "\n",
-    "This can be acccomplished through convolution, which is a neighbourhood operation in which each output pixel is the weighted sum of neighbouring input pixels. The matrix of weights is called the convolution kernel, below we show a 3x3 kernel that we will use for our moving average filter:\n",
+    "This can be acccomplished through convolution, which is a neighbourhood operation in which each output pixel is the weighted sum of neighbouring input pixels. The matrix of weights is called the convolution kernel, below we show a $3\\times3$ kernel that we will use for our moving average filter:\n",
     "\n",
     "\n",
     "<p style=\"text-align:center;\"><img src=\"Data_Image_Filtering/kernel.png\" style=\"width:15%\"  /></p>\n",
