--- a/notebooks/d_geosciences/Remote Sensing/Image_Point_Operations.ipynb
+++ b/notebooks/d_geosciences/Remote Sensing/Image_Point_Operations.ipynb
@@ -38,7 +38,7 @@
     "```\n",
     "```{index} Pseudo colour display\n",
     "```\n",
-    "**True colour composite** -> display of 3 image bands in red, green and blue spectral ranges matching RGB. \n",
+    "**True colour composite** -> display of $3$ image bands in red, green and blue spectral ranges matching RGB. \n",
     "\n",
     "**False colour composite** -> bands displayed in red, green and blue do not match the spectra of these three primary colours\n",
     "\n",
@@ -156,7 +156,7 @@
     "```{index} Point operations\n",
     "```\n",
     "\n",
-    "A point operation is a modification of a pixel value which is based on that pixel value and is independent of location or neighboring values. If we let x represent a digital image and $x_{i,j}$ is the DN of any pixel and Y the output pixel of any image then we describe any point operations as:\n",
+    "A point operation is a modification of a pixel value which is based on that pixel value and is independent of location or neighboring values. If we let $x$ represent a digital image and $x_{i,j}$ is the DN of any pixel and $Y$ the output pixel of any image then we describe any point operations as:\n",
     "\n",
     "$$y_{i,j}=f(x_{i,j}).$$\n",
     "\n",
@@ -289,8 +289,8 @@
     "\n",
     "$$y = ax + b$$\n",
     "\n",
-    "- if a > 1, stretching function which increase the image contrast\n",
-    "- if a <1 but positive, compressional function which decreases the image contrast\n",
+    "- if $a > 1$, stretching function which increase the image contrast\n",
+    "- if $a < 1$ but positive, compressional function which decreases the image contrast\n",
     "\n",
     "This function effect can be visualised as follows:\n",
     "\n",
