--- a/notebooks/d_geosciences/Remote Sensing/Image_Transformations_and_Orthorectification.ipynb
+++ b/notebooks/d_geosciences/Remote Sensing/Image_Transformations_and_Orthorectification.ipynb
@@ -102,11 +102,12 @@
    "metadata": {},
    "source": [
     "## Translation\n",
-    "Translation is the shifting of an objects location. If you know the shift in (x,y) direction, let it be $(T_x, T_y)$, you can create the transformation matrix M as follows:\n",
-    "\\\\[ M = \\begin{bmatrix}\n",
+    "Translation is the shifting of an objects location. If you know the shift in $(x,y)$ direction, let it be $(T_x, T_y)$, you can create the transformation matrix $M$ as follows:\n",
+    "\n",
+    "$$M = \\begin{bmatrix}\n",
     "1 & 0 & t_x\\\\\n",
     "0 & 1 & t_y\n",
-    "\\end{bmatrix}\\\\]\n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "Note where the image axis point, commonly the origin lies at the top left.\n"
    ]
@@ -170,10 +171,12 @@
     "## Rotation\n",
     "\n",
     "Rotation of an image for an angle $\\theta$ is achieved by the transformation matrix of the form:\n",
-    "\\\\[ M = \\begin{bmatrix}\n",
-    " cos \\theta & -sin\\theta\\\\\n",
-    " sin\\theta & cos\\theta\n",
-    "\\end{bmatrix}\\\\]\n",
+    "\n",
+    "$$M = \\begin{bmatrix}\n",
+    " \\cos \\theta & -\\sin\\theta\\\\\n",
+    " \\sin\\theta & \\cos\\theta\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
     "OpenCv appends upon this to allow the rotation with adjustable centre of rotation. "
    ]
   },
