--- a/notebooks/d_geosciences/Waves/Attenuation.ipynb
+++ b/notebooks/d_geosciences/Waves/Attenuation.ipynb
@@ -39,8 +39,8 @@
     "```\n",
     "\n",
     "In dispersion, higher frequency waves travel faster than lower frequency waves. The energy spreads out thus leaving less intensity for the pulses.\n",
-    "<img src=\"http://blog.soton.ac.uk/soundwaves/files/2013/12/essaiwave.gif\" alt=\"image info\" width=\"300\" \n",
-    "     height=\"300\"/>\n"
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"http://blog.soton.ac.uk/soundwaves/files/2013/12/essaiwave.gif\" alt=\"image info\" style= \"width: 40%\"/></p>\n"
    ]
   },
   {
@@ -52,7 +52,11 @@
     "```{index} Geometric spreading\n",
     "```\n",
     "\n",
-    "Energy spreads out as a function of area. Thus, intensity decreases away from the source. It is important to look at the dimensions of spreading, i.e. water waves pread in 2D so the area is $2\\pi r$. Body waves spread out in 3D, so the area to consider is $2 \\pi r^2$. Geometric spreading is defined as initial intensity divided by the area as a function of distance from the source so $$\\frac{I_0}{area}$$ For example, $\\frac{I_0}{2\\pi r}$ for water waves."
+    "Energy spreads out as a function of area. Thus, intensity decreases away from the source. It is important to look at the dimensions of spreading, i.e. water waves pread in 2D so the area is $2\\pi r$. Body waves spread out in 3D, so the area to consider is $2 \\pi r^2$. Geometric spreading is defined as initial intensity divided by the area as a function of distance from the source so \n",
+    "\n",
+    "$$\\frac{I_0}{area}$$ \n",
+    "\n",
+    "For example, $\\frac{I_0}{2\\pi r}$ for water waves."
    ]
   },
   {
@@ -102,8 +106,8 @@
     "```\n",
     "\n",
     "Scattering occurs when a medium's impedance has length scales that are smaller than the wavelength of the wave. These changes can also cause reflection and transmission.\n",
-    "<img src=\"https://clarkscience8.weebly.com/uploads/2/6/3/7/2637711/published/lightbehavior.png?1579703254\" alt=\"image info\" width=\"300\" \n",
-    "     height=\"300\"/>"
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://clarkscience8.weebly.com/uploads/2/6/3/7/2637711/published/lightbehavior.png?1579703254\" alt=\"image info\" style= \"width: 40%\"/></p>"
    ]
   },
   {
@@ -116,11 +120,15 @@
     "```\n",
     "\n",
     "Gradual loss of energy from the wave, due to materials not being perfectly elastic. This energy is converted into heat. Attenuation can cause damping of particle motion.\n",
-    "If there is a friction that opposes the motion of oscillation, the equation of motion for the particle becomes $$m \\frac{d^2 y}{d t^2} = -sy -r \\frac{dy}{dt}$$\n",
+    "If there is a friction that opposes the motion of oscillation, the equation of motion for the particle becomes \n",
+    "\n",
+    "$$m \\frac{d^2 y}{d t^2} = -sy -r \\frac{dy}{dt}$$\n",
+    "\n",
     "This equation has three solutions:\n",
+    "\n",
     "- Heavy damping: strongest case of attenuation, prohibiting the particle to oscillate. Solution of the form $y=Ce^{-at}$. So damping in this situation is stronger than the restoring force.\n",
     "- Critical damping: solution of the form $y=(A+Bt)e^{-pt}$. Less attenuation than in heavy damping case, but returns to rest position more quickly still if it has zero velocity at the start.\n",
-    "- Light damping is of the form $y=y_0e^{-bt}cos(\\omega t + \\phi)$."
+    "- Light damping is of the form $y=y_0e^{-bt}\\cos(\\omega t + \\phi)$."
    ]
   },
   {
@@ -172,7 +180,11 @@
     "```{index} Quality factor\n",
     "```\n",
     "\n",
-    "The quality factor is of the form $$ Q = \\frac{m \\omega_0}{r}$$ where $\\omega_0 =\\sqrt{\\frac{s}{m}}$, the natural frequency."
+    "The quality factor is of the form \n",
+    "\n",
+    "$$ Q = \\frac{m \\omega_0}{r}$$ \n",
+    "\n",
+    "where $\\omega_0 =\\sqrt{\\frac{s}{m}}$, the natural frequency."
    ]
   }
  ],
