--- a/notebooks/d_geosciences/Waves/Fourier_Series.ipynb
+++ b/notebooks/d_geosciences/Waves/Fourier_Series.ipynb
@@ -11,7 +11,7 @@
     ]
    },
    "source": [
-    "# Fourier series\n",
+    "# Fourier series in Python\n",
     "```{index} Fourier series\n",
     "```\n",
     "\n",
@@ -20,12 +20,17 @@
     "Waves of any shape can be modelled and described using Fourier series. \n",
     "\n",
     "The general Fourier series is of the form:\n",
-    "$y(t) = \\frac{a_0}{2} + \\sum_{n=1}^{n=\\infty} a_n sin(n\\omega t) +\\sum_{m=1}^{m=\\infty} b_m sin(m\\omega t) $. \n",
+    "\n",
+    "$$y(t) = \\frac{a_0}{2} + \\sum_{n=1}^{\\infty} a_n \\sin(n\\omega t) +\\sum_{m=1}^{\\infty} b_m \\sin(m\\omega t) $$\n",
     "\n",
     "\n",
-    "Here, $$a_0 = \\frac{2}{\\tau} \\int_{0}^{\\tau} y(t) dt$$\n",
-    "$$a_n = \\frac{2}{\\tau} \\int_{0}^{\\tau} y(t)sin(n\\omega t) dt$$\n",
-    "$$b_m = \\frac{2}{\\tau} \\int_{0}^{\\tau} y(t)cos(m\\omega t) dt$$\n",
+    "Here, \n",
+    "\n",
+    "$$a_0 = \\frac{2}{\\tau} \\int_{0}^{\\tau} y(t) \\,dt$$\n",
+    "\n",
+    "$$a_n = \\frac{2}{\\tau} \\int_{0}^{\\tau} y(t)\\sin(n\\omega t) \\,dt$$\n",
+    "\n",
+    "$$b_m = \\frac{2}{\\tau} \\int_{0}^{\\tau} y(t)\\cos(m\\omega t) \\,dt$$\n",
     "\n",
     "Where $\\tau$ is the period."
    ]
@@ -178,9 +183,9 @@
    "source": [
     "Figure above:\n",
     "\n",
-    "n(t) = -1, -$\\pi$ < t < 0\n",
+    "$$n(t) = -1 \\quad ; \\quad -\\pi < t < 0$$\n",
     "\n",
-    "n(t) = 1, 0< t < $\\pi$ "
+    "$$n(t) = 1 \\quad ; \\quad 0< t < \\pi$$ "
    ]
   },
   {
@@ -217,8 +222,9 @@
    "id": "26ed2a86",
    "metadata": {},
    "source": [
-    "The series are truncated at 10 components, due to Fourier series being infinite. Adding more components will make the plot look more similar to the box plot above.\n",
-    "**note** that we know the box plot above is an odd function, hence we can assume the Fourier series are made up solely of sine functions, thus the $b_m$ term is zero. If the function is even, we can expect only cosine functions, thus the $a_n$ term is zero."
+    "The series are truncated at $10$ components, due to Fourier series being infinite. Adding more components will make the plot look more similar to the box plot above.\n",
+    "\n",
+    "**Note** that we know the box plot above is an odd function, hence we can assume the Fourier series are made up solely of sine functions, thus the $b_m$ term is zero. If the function is even, we can expect only cosine functions, thus the $a_n$ term is zero."
    ]
   },
   {
@@ -265,12 +271,11 @@
     "\n",
     "A fourier tranform changes the domain of a function from time to frequency. Any function can be composed of infinite series like sines and cosines. For example, in the plot above, Fourier series are used to make a box plot out of sine functions. \n",
     "\n",
-    "In the plot above, the series where truncated at 10 components. In the gif below is shown what happens if more and more components are added.\n",
+    "In the plot above, the series where truncated at $10$ components. In the gif below is shown what happens if more and more components are added.\n",
     "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/a/af/Fourier_synthesis_square_wave_animated.gif\" alt=\"image info\" width=\"300\" \n",
-    "     height=\"300\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://upload.wikimedia.org/wikipedia/commons/a/af/Fourier_synthesis_square_wave_animated.gif\" alt=\"image info\" style= \"width: 30%\"/></p>\n",
     "\n",
-    "It can be seen that each component is a new function with a certain amplitud and period. These variables of each component can be displayed on a **frequency spectrum**. Decomposing the amplitudes of the components and the period can be done using a fourier transform. In Python, a 'Fast Fourier Transform' can be performed of which a frequency spectrum can be made."
+    "It can be seen that each component is a new function with a certain amplitude and period. These variables of each component can be displayed on a **frequency spectrum**. Decomposing the amplitudes of the components and the period can be done using a fourier transform. In Python, a 'Fast Fourier Transform' can be performed of which a frequency spectrum can be made."
    ]
   },
   {
@@ -345,14 +350,6 @@
     "ax.set_xlabel('Frequency in Hertz (Hz)')\n",
     "ax.set_ylabel('Frequency Domain')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9000474a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
