--- a/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
+++ b/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
@@ -33,18 +33,18 @@
     "## Wave properties\n",
     "\n",
     "A summary of the wave properties can be seen in the figure below:\n",
-    "<img src=\"http://hyperphysics.phy-astr.gsu.edu/hbase/imgmec/shm.gif\" alt=\"image info\" width=\"400\" \n",
-    "     height=\"500\"/>\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"http://hyperphysics.phy-astr.gsu.edu/hbase/imgmec/shm.gif\" alt=\"image info\" style= \"width: 40%\"/></p>\n",
     "\n",
     "Selection of wave properties:\n",
-    "   - t -- time\n",
-    "   -  A -- amplitude\n",
-    "   -  f -- frequency, $f = \\frac{\\omega}{2\\pi}$\n",
+    "   - $t$ -- time\n",
+    "   - $A$ -- amplitude\n",
+    "   - $f$ -- frequency, $f = \\frac{\\omega}{2\\pi}$\n",
     "   - $\\lambda$ -- wavelength, $\\lambda = vf = \\frac{2\\pi}{k}$\n",
-    "   - T -- period, $ T = \\frac{1}{f}$\n",
-    "   - p -- phase shift\n",
-    "   -  $\\omega$ -- angular frequency\n",
-    "   -  k -- wave number\n",
+    "   - $T$ -- period, $ T = \\frac{1}{f}$\n",
+    "   - $p$ -- phase shift\n",
+    "   - $\\omega$ -- angular frequency\n",
+    "   - $k$ -- wave number\n",
     "   - $c_p$ -- phase speed, $c_p = \\frac{\\omega}{k}$\n",
     "   \n",
     "A variation and comparison between a selection of wave properties can be seen below:"
@@ -108,27 +108,51 @@
     "\n",
     "A wave carries information and energy but does not transport the material. It undergoes simple harmonic motion.\n",
     "\n",
-    "To derive the formula for simple harmonic motion (SHM), assume an object of mass m and mean position y0 and the displacement 'y'. In SMH, there is a restoring force that is directed towards the mean position y0 at every instant. The restoring force is directly proportional to the displacement of the body at every instant, so $F \\propto -y$. The negative sign indicates that the restoring force acts opposite to the displacement. Thus, including the force constant, k, $F = -ky$ (1).\n",
+    "To derive the formula for simple harmonic motion (SHM), assume an object of mass m and mean position $y_0$ and the displacement '$y$'. In SHM, there is a restoring force that is directed towards the mean position $y_0$ at every instant. The restoring force is directly proportional to the displacement of the body at every instant, so $F \\propto -y$. The negative sign indicates that the restoring force acts opposite to the displacement. Thus, including the force constant, $k$, \n",
     "\n",
-    "Now consider Newton's second law of motion $F = ma$, where F is the restoring force on the body, m is the mass and a is the acceleration. Since $a = \\frac{dv}{dt}= \\frac{d^2 y}{d t^2}$, $F = m \\frac{d^2 y}{d t^2}$ (2). Combining equations (1) and (2), $m \\frac{d^2 y}{d t^2} = -ky$, so $\\frac{d^2 y}{d t^2} = - \\frac{k}{m}y$.\n",
+    "$$F = -ky \\qquad (1)$$\n",
     "\n",
-    "So, $\\frac{d^2 y}{d t^2} + \\frac{k}{m}y = 0$.\n",
+    "Now consider Newton's second law of motion $F = ma$, where $F$ is the restoring force on the body, $m$ is the mass and $a$ is the acceleration. \n",
     "\n",
-    "Let $\\frac{k}{m} = \\omega^2$. Now, $\\frac{d^2 y}{d t^2} + \\omega^2 y = 0$ (3).\n",
+    "Since $a = \\frac{dv}{dt}= \\frac{d^2 y}{d t^2}$, so\n",
+    "\n",
+    "$$F = m \\frac{d^2 y}{d t^2} \\qquad (2)$$\n",
+    "\n",
+    "Combining equations (1) and (2), we get\n",
+    "\n",
+    "$$m \\frac{d^2 y}{d t^2} = -ky$$\n",
+    "\n",
+    "$$\\frac{d^2 y}{d t^2} = - \\frac{k}{m}y$$\n",
+    "\n",
+    "$$\\frac{d^2 y}{d t^2} + \\frac{k}{m}y = 0$$\n",
+    "\n",
+    "Let $\\frac{k}{m} = \\omega^2$. Now, \n",
+    "\n",
+    "$$\\frac{d^2 y}{d t^2} + \\omega^2 y = 0 \\qquad (3)$$\n",
     "\n",
     "The solution to this equation can be approximated from analysis, knowing that a sin or cosine function when differentiated twice returns to it's original form, with a factor in front. So, we can estimate the solution to be \n",
     "\n",
-    "$ y = A sin(\\omega t)$, as we know that\n",
+    "$$ y = A \\sin(\\omega t)$$\n",
     "\n",
-    "$v = \\frac{dy}{dt} = A\\omega sin(\\omega t)$ and \n",
+    "As we know that\n",
     "\n",
-    "$a = \\frac{d^2y}{dt^2} = A\\omega^2 sin(\\omega t)$. \n",
+    "$$v = \\frac{dy}{dt} = A\\omega \\sin(\\omega t)$$\n",
     "\n",
-    "Filling $ y = A sin(\\omega t)$ back into equation (3), we get $ A\\omega^2 sin(\\omega t) + A sin(\\omega t) * \\omega^2$, which shows that this solution is valid.\n",
+    "and \n",
     "\n",
-    "Thus, the solution to the wave equation is: $ y = A sin(\\omega t) = A sin (2 \\pi f t)$\n",
+    "$$a = \\frac{d^2y}{dt^2} = A\\omega^2 \\sin(\\omega t)$$\n",
     "\n",
-    "Here, A is the magnitude of the initial displacement, $\\omega$ is the angular frequency and t is time."
+    "Filling $ y = A \\sin(\\omega t)$ back into equation (3), we get \n",
+    "\n",
+    "$$ A\\omega^2 \\sin(\\omega t) + A \\sin(\\omega t) \\cdot \\omega^2$$\n",
+    "\n",
+    "which shows that this solution is valid.\n",
+    "\n",
+    "Thus, the solution to the wave equation is: \n",
+    "\n",
+    "$$ y = A \\sin(\\omega t) = A \\sin (2 \\pi f t)$$\n",
+    "\n",
+    "Here, $A$ is the magnitude of the initial displacement, $\\omega$ is the angular frequency and $t$ is time."
    ]
   },
   {
@@ -199,10 +223,27 @@
    "id": "37ecf937",
    "metadata": {},
    "source": [
-    "Using trigonometry, $F = ma = -mgsin(\\theta)$, thus $a = gsin(\\theta)$. Approximate that for small $sin(\\theta) = \\theta$, so $F = ma = mg\\theta = m \\frac{y}{l}$. Thus, $a = \\frac{F}{ml}y$ (tussenstap). If the restoring force is tension from a string for example, it can be approximated as F=-2T, considering a string pulls the body from the left and right side.\n",
+    "Using trigonometry, \n",
     "\n",
+    "$$F = ma = -mg\\sin(\\theta)$$\n",
     "\n",
-    "The equation of simple harmonic motion then becomes: $\\frac{d^2 y}{d t^2} = - \\frac{2T}{ml} y = -\\omega ^2 y $"
+    "Thus, \n",
+    "\n",
+    "$$a = g\\sin(\\theta)$$ \n",
+    "\n",
+    "Approximate that for small $\\sin(\\theta) = \\theta$, so \n",
+    "\n",
+    "$$F = ma = mg\\theta = m \\frac{y}{l}$$ \n",
+    "\n",
+    "Thus, \n",
+    "\n",
+    "$$a = \\frac{F}{ml}y$$ (tussenstap). \n",
+    "\n",
+    "If the restoring force is tension from a string for example, it can be approximated as $F=-2T$, considering a string pulls the body from the left and right side.\n",
+    "\n",
+    "The equation of simple harmonic motion then becomes: \n",
+    "\n",
+    "$$\\frac{d^2 y}{d t^2} = - \\frac{2T}{ml} y = -\\omega ^2 y $$"
    ]
   },
   {
@@ -220,24 +261,35 @@
    "id": "9007096a",
    "metadata": {},
    "source": [
-    "To derive the wave equation, a string with density $\\rho$ per unit length is stretched in the x direction with tension force T. A wave can be described as coupled simple harmonic motion. This can be thought of as a rope with lots of masses being displaced individually.\n",
+    "To derive the wave equation, a string with density $\\rho$ per unit length is stretched in the $x$ direction with tension force $T$. A wave can be described as coupled simple harmonic motion. This can be thought of as a rope with lots of masses being displaced individually.\n",
     "\n",
-    "<img src=\"https://media.springernature.com/lw685/springer-static/image/chp%3A10.1007%2F978-3-030-44787-8_3/MediaObjects/333528_2_En_3_Fig1_HTML.png\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"https://media.springernature.com/lw685/springer-static/image/chp%3A10.1007%2F978-3-030-44787-8_3/MediaObjects/333528_2_En_3_Fig1_HTML.png\" alt=\"wave equation\" style= \"width: 40%\"/></p>\n",
     "     \n",
-    "The vertical forces on the string must balance. Consider Newton's second law for the force, where $F=ma$. Consider $m=\\rho*\\Delta x$, as $m = \\rho * V$ and only one dimension is considered. So, force is $m*a=\\rho \\Delta x * \\frac{\\partial ^2 u}{\\partial t^2}$. This is equal to the difference between the vertical tension T at the two ends, so \n",
+    "The vertical forces on the string must balance. \n",
     "\n",
-    "$\\rho \\Delta x * \\frac{\\partial ^2 u}{\\partial t^2} = T(x+ \\Delta x, t)sin\\theta(x+\\Delta x, t) - T(x,t)sin\\theta(x,t)$.\n",
+    "Consider Newton's second law for the force, where $F=ma$\n",
     "\n",
-    "Assume that the deflection angles $\\theta$ are small, sin$\\theta$ = tan $\\theta$ = $\\frac{\\partial u}{\\partial x}$. \n",
-    "Thus, $\\rho \\Delta x * \\frac{\\partial ^2 u}{\\partial t^2} = T(x+ \\Delta x, t)\\frac{\\partial u}{\\partial x} - T(x,t)\\frac{\\partial u}{\\partial x}$.\n",
+    "Consider $m=\\rho\\Delta x$, as $m = \\rho V$ and only one dimension is considered. So, force is \n",
+    "\n",
+    "$$ma=\\rho \\Delta x \\cdot \\frac{\\partial ^2 u}{\\partial t^2}$$\n",
+    "\n",
+    "This is equal to the difference between the vertical tension T at the two ends, so \n",
+    "\n",
+    "$$\\rho \\Delta x \\cdot \\frac{\\partial ^2 u}{\\partial t^2} = T(x+ \\Delta x, t)\\sin\\left[\\theta(x+\\Delta x, t)\\right] - T(x,t)\\sin\\left[\\theta(x,t)\\right]$$\n",
+    "\n",
+    "Assume that the deflection angles $\\theta$ are small, $\\sin\\theta = \\tan\\theta = \\frac{\\partial u}{\\partial x}$. Thus, \n",
+    "\n",
+    "$$\\rho \\Delta x \\cdot \\frac{\\partial ^2 u}{\\partial t^2} = T(x+ \\Delta x, t)\\frac{\\partial u}{\\partial x} - T(x,t)\\frac{\\partial u}{\\partial x}$$\n",
     "\n",
     "Divide both sides by $\\Delta x$ and letting $\\Delta x \\rightarrow 0$ gives:\n",
-    "$\\rho(x)\\frac{\\partial^2 u}{\\partial t^2} = \\frac{\\partial}{\\partial x}(T \\frac{\\partial u}{\\partial x})$.\n",
     "\n",
-    "Assuming deflection is small, T can be assumed to be constant. Considering $c^2 = \\frac{T}{\\rho}$, the wave equation becomes\n",
+    "$$\\rho(x)\\frac{\\partial^2 u}{\\partial t^2} = \\frac{\\partial}{\\partial x}\\left(T \\frac{\\partial u}{\\partial x}\\right)$$\n",
     "\n",
-    "$\\frac{\\partial^2 u}{\\partial t^2} = c^2 \\frac{\\partial^2 u}{\\partial x^2}$"
+    "Assuming deflection is small, $T$ can be assumed to be constant. \n",
+    "\n",
+    "Considering $c^2 = \\frac{T}{\\rho}$, the wave equation becomes\n",
+    "\n",
+    "$$\\frac{\\partial^2 u}{\\partial t^2} = c^2 \\frac{\\partial^2 u}{\\partial x^2}$$"
    ]
   },
   {
@@ -245,12 +297,15 @@
    "id": "6562f1f3",
    "metadata": {},
    "source": [
-    "One solution to the wave equation is by using travelling waves of the form $u(x,t) = f(x \\pm ct)$. At t=0, f(x) is a shape in space. $f(x-ct)$ is the shape of f(x) when travelling to the right at speed c.$ f(x+ct) $is the shape of f(x) when travelling to the left at speed c.\n",
+    "One solution to the wave equation is by using travelling waves of the form $u(x,t) = f(x \\pm ct)$. \n",
     "\n",
+    "At $t=0$, $f(x)$ is a shape in space. \n",
     "\n",
+    "$f(x-ct)$ is the shape of $f(x)$ when travelling to the right at speed $c$. \n",
     "\n",
-    "<img src=\"https://la.mathworks.com/matlabcentral/mlc-downloads/downloads/submissions/59621/versions/1/screenshot.gif\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/>\n"
+    "$f(x+ct)$ is the shape of $f(x)$ when travelling to the left at speed $c$.\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://la.mathworks.com/matlabcentral/mlc-downloads/downloads/submissions/59621/versions/1/screenshot.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n"
    ]
   },
   {
@@ -277,8 +332,9 @@
     "- Longitudinal waves: waves where the displacement of the medium is in the same direction as the travelling wave. Examples are P-waves or sound waves.\n",
     "\n",
     "- Transverse wave: waves where motion of all points oscillate in a path that is perpendicular to the direction of the travelling wave. Examples are seismic S-waves, electro-magnetic waves and vibrations on string.\n",
-    "<img src=\"https://www.physicslens.com/wp-content/uploads/2022/03/longitudinal-transverse-waves.gif\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/>\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.physicslens.com/wp-content/uploads/2022/03/longitudinal-transverse-waves.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n",
+    "\n",
     "```{index} Surface waves\n",
     "```\n",
     "```{index} Love waves\n",
@@ -289,15 +345,17 @@
     "```\n",
     "*Surface waves*\n",
     "- Love wave: wave moving horizontally and perpendicular to the direction of travel.\n",
-    "<img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Love-wave.gif\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/>\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Love-wave.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n",
     "\n",
     "- Rayleigh wave: wave causing elliptical retrograde motion (opposite to direction of travel) in the vertical plane along direction of travel as a combination of both longitudinal and transverse vibration.\n",
-    "<img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Rayleigh-wave.gif\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/>\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://www.sciencenewsforstudents.org/wp-content/uploads/2019/11/350_inline_Rayleigh-wave.gif\" alt=\"wave equation\" style= \"width: 50%\"/></p>\n",
+    "\n",
     "- Water wave: circular motion of elements moving in the same direction of wave travel.\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/4a/Deep_water_wave.gif\" alt=\"wave equation\" width=\"400\" \n",
-    "     height=\"500\"/>"
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://upload.wikimedia.org/wikipedia/commons/4/4a/Deep_water_wave.gif\" alt=\"wave equation\" width=\"400\" \n",
+    "     height=\"500\"/></p>"
    ]
   },
   {
@@ -309,14 +367,6 @@
     "\n",
     "Imperial College waves lecture notes\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a47c709",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
