--- a/notebooks/d_geosciences/Waves/Refraction.ipynb
+++ b/notebooks/d_geosciences/Waves/Refraction.ipynb
@@ -58,10 +58,9 @@
     "```{index} Superposition (Waves)\n",
     "```\n",
     "\n",
-    "When waves get superimposed, their phase needs to be considered. For example, when waves are exactly 180 degrees or $\\pi$ out of phase, destructive interference occurs. If the waves are in phase, constructive interference occurs.\n",
+    "When waves get superimposed, their phase needs to be considered. For example, when waves are exactly $180$ degrees or $\\pi$ out of phase, destructive interference occurs. If the waves are in phase, constructive interference occurs.\n",
     "\n",
-    "<img src=\"http://waveskms.weebly.com/uploads/2/0/6/9/20699724/9139460_orig.gif\" alt=\"image info\" width=\"400\" \n",
-    "     height=\"400\"/>"
+    "<p style=\"text-align:center;\"><img src=\"http://waveskms.weebly.com/uploads/2/0/6/9/20699724/9139460_orig.gif\" alt=\"image info\" style= \"width: 40%\"/></p>"
    ]
   },
   {
@@ -169,7 +168,11 @@
    "source": [
     "For **reflection**, the angle of incidence to the normal is the same as the angle of reflection for a wavefront: $\\theta_i = \\theta_r$.\n",
     "\n",
-    "**Refraction** is decribed by **Snell's law**. Snell's law is as follows: $$\\frac{sin\\theta_i}{sin\\theta_r} = \\frac{c_1}{c_2} = n $$ where n is the ratio of the phase velocity of the two media, also known as the refractive index."
+    "**Refraction** is decribed by **Snell's law**. Snell's law is as follows: \n",
+    "\n",
+    "$$\\frac{\\sin\\theta_i}{\\sin\\theta_r} = \\frac{c_1}{c_2} = n $$ \n",
+    "\n",
+    "where $n$ is the ratio of the phase velocity of the two media, also known as the refractive index."
    ]
   },
   {
@@ -177,8 +180,7 @@
    "id": "5e5bb7c1",
    "metadata": {},
    "source": [
-    "<img src=\"https://galileounbound.files.wordpress.com/2020/01/snellslaw.jpg?w=2400\" alt=\"image info\" width=\"400\" \n",
-    "     height=\"400\"/>\n"
+    "<p style=\"text-align:center;\"><img src=\"https://galileounbound.files.wordpress.com/2020/01/snellslaw.jpg?w=2400\" alt=\"image info\" style= \"width: 40%\"/></p>\n"
    ]
   },
   {
@@ -264,7 +266,7 @@
    "id": "955946e8",
    "metadata": {},
    "source": [
-    "For critically refraced angle, theta_r must be 90 degrees. A critcally refraced ray travels between the two layers with speed v2, and is only created when v2 > v1.\n",
+    "For critically refraced angle, $\\theta_r$ must be $90$ degrees. A critcally refraced ray travels between the two layers with speed $v_2$, and is only created when $v_2 > v_1$.\n",
     "\n",
     "A head wave forms from the critically refracted ray, since this ray acts as point sources creating semi-circular wavefronts."
    ]
@@ -368,14 +370,6 @@
     "ax.set_ylabel('Depth (m)')\n",
     "ax.set_title('Critically refracted ray')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e814a85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
