--- a/notebooks/d_geosciences/Waves/Transmission_and_Reflection.ipynb
+++ b/notebooks/d_geosciences/Waves/Transmission_and_Reflection.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "4822e4ca",
    "metadata": {},
    "outputs": [],
@@ -48,20 +48,22 @@
    "source": [
     "Impedance is a measure of how difficult it is for a wave to travel through a certain medium.\n",
     "\n",
-    "The physical properties characterizing the model are:\n",
-    "density ($\\rho$) and\n",
-    "seismic velocity ($c$)\n",
-    "The acoustic impedance of each layer is: $$ Z = \\rho c   $$\n",
-    "with units $[kg s^{-1}]$.\n",
+    "The physical properties characterizing the model are density ($\\rho$) and seismic velocity ($c$)\n",
+    "\n",
+    "The acoustic impedance of each layer is: \n",
+    "\n",
+    "$$ Z = \\rho c   $$\n",
+    "\n",
+    "with units $[kg\\,s^{-1}]$.\n",
     "\n",
     "Consider a reflectivity model and let's calculate the impedance for all three layers.\n",
-    "<img src=\"https://github.com/geoscixyz/geosci-labs/blob/main/images/seismic/Step3FixedMod.png?raw=true\" alt=\"image info\" width=\"300\" \n",
-    "     height=\"300\"/>"
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"https://github.com/geoscixyz/geosci-labs/blob/main/images/seismic/Step3FixedMod.png?raw=true\" alt=\"image info\" style= \"width: 40%\"/></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "69ec92da",
    "metadata": {},
    "outputs": [
@@ -69,16 +71,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The acoustic impedance of layer 1 = 1000000 kg s^-1\n",
-      "The acoustic impedance of layer 2 = 2300000 kg s^-1\n",
-      "The acoustic impedance of layer 3 = 3450000 kg s^-1\n"
+      "The acoustic impedance of layer 1 = 1000000 kg/s\n",
+      "The acoustic impedance of layer 2 = 2300000 kg/s\n",
+      "The acoustic impedance of layer 3 = 3450000 kg/s\n"
      ]
     }
    ],
    "source": [
     "def acoustic_impedance(rho, c, layer_number):\n",
     "    z = rho*c\n",
-    "    print('The acoustic impedance of layer', layer_number, '=', z, 'kg s^-1')\n",
+    "    print('The acoustic impedance of layer', layer_number, '=', z, 'kg/s')\n",
     "    return z\n",
     "\n",
     "rho1 = 2000\n",
@@ -121,29 +123,38 @@
    "source": [
     "Consider acoustic impedance in a different light where a seismic wave travels through a medium. When an incident wave apporaches a boundary of different density and seismic velocity (thus, different impedance), a wave can reflected or transmitted. We make a few assumptions:\n",
     "\n",
-    "- y_i + y_r = y_p (for a continuous string across a boundary and conservation of energy)\n",
+    "- $y_i + y_r = y_p$ (for a continuous string across a boundary and conservation of energy)\n",
     "- tension in the string must be continuous\n",
     "\n",
-    "Consider the subscript i for the incidence wave, r for the reflected wave and p for the propagating/transmitted wave.\n",
+    "Consider the subscript $i$ for the incidence wave, $r$ for the reflected wave and $p$ for the propagating/transmitted wave.\n",
     "\n",
     "Consider coefficients of reflection and transmission now as the ratio between the amplitude of the reflected/transmitted wave and incident wave respectively.\n",
     "\n",
-    "The reflection coefficient is $$ R = \\frac{y_{0r}}{y_{0i}}$$ and the transmission coefficient is $$ P = \\frac{y_{0p}}{y_{0i}}$$.\n",
+    "The reflection coefficient is \n",
     "\n",
-    "For this module, we are assuming that the incident wave travels normal to the boundary. Thus $\\theta i$ is 0, as well as $\\theta r$ and $\\theta p$.\n",
+    "$$ R = \\frac{y_{0r}}{y_{0i}}$$ \n",
     "\n",
-    "<img src=\"https://ars.els-cdn.com/content/image/1-s2.0-S138373031023003X-gr2.gif\" alt=\"image info\" width=\"300\" \n",
-    "     height=\"300\"/>\n",
-    "From acoustic impedance, the down-going reflection coefficient for amplitude is given by $$ R = \\frac{Z_{1}-Z_2}{Z_1+Z_2} $$\n",
+    "and the transmission coefficient is \n",
     "\n",
-    "and the transmission coefficient is $$ P = \\frac{2Z_{1}}{Z_1+Z_2} $$\n",
+    "$$ P = \\frac{y_{0p}}{y_{0i}}$$\n",
     "\n",
-    "Considering wave energy transfer, where wave total energy per unit string is defined as: $ E = \\frac{ \\rho \\omega^2 {y_0}^2}{2}$.\n",
+    "For this module, we are assuming that the incident wave travels normal to the boundary. Thus $\\theta_i = \\theta_r = \\theta_p = 0$.\n",
     "\n",
-    "$$ R = (\\frac{Z_{1}-Z_2}{Z_1+Z_2})^2 $$\n",
+    "<p style=\"text-align:center;\"><img src=\"https://ars.els-cdn.com/content/image/1-s2.0-S138373031023003X-gr2.gif\" alt=\"image info\" style= \"width: 50%\"/></p>\n",
     "\n",
-    "and the transmission coefficient is $$ P = \\frac{4 Z_{1} Z_2}\n",
-    "{(Z_1+Z_2)^2} $$\n",
+    "From acoustic impedance, the down-going reflection coefficient for amplitude is given by \n",
+    "\n",
+    "$$ R = \\frac{Z_{1}-Z_2}{Z_1+Z_2} $$\n",
+    "\n",
+    "and the transmission coefficient is \n",
+    "\n",
+    "$$ P = \\frac{2Z_{1}}{Z_1+Z_2} $$\n",
+    "\n",
+    "Considering wave energy transfer, where wave total energy per unit string is defined as $ E = \\frac{ \\rho \\omega^2 {y_0}^2}{2}$.\n",
+    "\n",
+    "$$ R = \\left(\\frac{Z_{1}-Z_2}{Z_1+Z_2}\\right)^2 $$\n",
+    "\n",
+    "$$ P = \\frac{4 Z_{1} Z_2}{(Z_1+Z_2)^2} $$\n",
     "\n",
     "**Note that 1 + R = P always, from conservation of energy**"
    ]
@@ -247,9 +258,9 @@
    "id": "ecc43e7d",
    "metadata": {},
    "source": [
-    "- Note that when Z1 $\\rightarrow 0$ (start of graph 1) and Z2 $\\rightarrow \\infty$ (end of graph 2), the reflection coefficient is -1 and transmission coefficient is 0. This means that the wave is completely reflected and has a phase change of $\\pi$\n",
-    "- If Z2 is zero, the incident wave is reflected, so the reflection coefficient is 1, and the transmission coefficient is 2. No wave can pass through layer 2 if Z2 is zero.\n",
-    "- If Z1=Z2 (markers on graph 2), the reflection coefficient is 0 and the transmission coefficient is 1. There is virtually no boundary as the properties, density and seismic velocity, of the media are the same."
+    "- Note that when $Z_1 \\to 0$ (start of graph 1) and $Z_2 \\to \\infty$ (end of graph 2), the reflection coefficient is $-1$ and transmission coefficient is $0$. This means that the wave is completely reflected and has a phase change of $\\pi$\n",
+    "- If $Z_2$ is zero, the incident wave is reflected, so the reflection coefficient is $1$, and the transmission coefficient is $2$. No wave can pass through layer 2 if $Z_2$ is zero.\n",
+    "- If $Z_1=Z_2$ (markers on graph 2), the reflection coefficient is $0$ and the transmission coefficient is $1$. There is virtually no boundary as the properties, density and seismic velocity, of the media are the same."
    ]
   },
   {
@@ -262,7 +273,7 @@
     "\n",
     "$$ R = \\frac{Z_2-Z_1}{Z_1+Z_2} $$\n",
     "\n",
-    "and the transmission coefficient is $$ P = \\frac{2Z_2}{Z_1+Z_2} $$\n",
+    "$$ P = \\frac{2Z_2}{Z_1+Z_2} $$\n",
     "\n"
    ]
   },
