--- a/notebooks/d_geosciences/mechanics/2_Motion_in_2D.ipynb
+++ b/notebooks/d_geosciences/mechanics/2_Motion_in_2D.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "module-mech"
+     "module-mech",
+     "module-phyp"
     ]
    },
    "source": [
@@ -39,15 +40,15 @@
     "\n",
     "Both force and position are vectors, so Newton's second law becomes:\n",
     "\n",
-    "\\\\[F=m\\frac{d^2\\vec{r}}{dt^2}\\\\]\n",
+    "$$F=m\\frac{d^2\\vec{r}}{dt^2}$$\n",
     "\n",
-    "where \\\\(\\vec{r}\\\\) is the position vector \\\\(r=x(t)\\vec{i}+y(t)\\vec{j}\\\\), with unit vectors \\\\(\\vec{i}\\\\) and \\\\(\\vec{j}\\\\) in \\\\(x\\\\) and \\\\(y\\\\) directions respectively.\n",
+    "where $\\vec{r}$ is the position vector $r=x(t)\\vec{i}+y(t)\\vec{j}$, with unit vectors $\\vec{i}$ and $\\vec{j}$ in $x$ and $y$ directions respectively.\n",
     "\n",
     "Thus, this equation represents two individual equations, one for each Cartesian direction:\n",
     "\n",
-    "\\\\[F_x=m\\frac{d^2x}{dt^2}\\\\]\n",
+    "$$F_x=m\\frac{d^2x}{dt^2}$$\n",
     "\n",
-    "\\\\[F_y=m\\frac{d^2x}{dt^2}\\\\]"
+    "$$F_y=m\\frac{d^2x}{dt^2}$$"
    ]
   },
   {
@@ -56,7 +57,7 @@
    "source": [
     "## Tutorial Problem 2.1\n",
     "\n",
-    "A cricket ball is hit at an angle \\\\(\\alpha=53.1˚\\\\) to the horizontal, at a speed of \\\\(37m/s\\\\). Find:\n",
+    "A cricket ball is hit at an angle $\\alpha=53.1˚$ to the horizontal, at a speed of $37\\,m/s$. Find:\n",
     "\n",
     "1. The maximum height that the ball will reach\n",
     "2. The total time that the ball travels before it hits the ground\n",
@@ -949,7 +950,7 @@
    "source": [
     "## Tutorial Problem 2.2\n",
     "\n",
-    "A rock is ejected from a volcano at an angle \\\\(\\alpha=89˚\\\\) with the horizontal with initial speed \\\\(200m/s\\\\). Find:\n",
+    "A rock is ejected from a volcano at an angle $\\alpha=89˚$ with the horizontal with initial speed $200\\,m/s$. Find:\n",
     "\n",
     "1. The maximum height that the ball will reach\n",
     "2. The total time that the ball travels before it hits the ground\n",
@@ -1596,13 +1597,13 @@
    "source": [
     "## Tutorial Problem 2.4\n",
     "\n",
-    "Consider a rock block of mass \\\\(m\\\\) sitting on a flat floor of a quarry, with a friction coefficient of \\\\(\\mu\\\\) between the rock and the floor. \n",
+    "Consider a rock block of mass $m$ sitting on a flat floor of a quarry, with a friction coefficient of $\\mu$ between the rock and the floor. \n",
     "\n",
-    "A quarryman wraps a rope around the rock, and pulls with a force of magnitude \\\\(F\\\\). His goal is to slide the block along the floor at some constant speed. He does not necessarily have to pull horizontally; he can pull at any angle \\\\(\\alpha\\\\) to the horizontal. \n",
+    "A quarryman wraps a rope around the rock, and pulls with a force of magnitude $F$. His goal is to slide the block along the floor at some constant speed. He does not necessarily have to pull horizontally; he can pull at any angle $\\alpha$ to the horizontal. \n",
     "\n",
-    "Find an expression for \\\\(F\\\\) as a function of \\\\(\\alpha\\\\), \\\\(\\mu\\\\), \\\\(g\\\\), and \\\\(m\\\\). \n",
+    "Find an expression for $F$ as a function of $\\alpha$, $\\mu$, $g$, and $m$. \n",
     "\n",
-    "What would be the optimum choice of \\\\(\\alpha\\\\), so that the block can be pulled with the smallest value of \\\\(F\\\\)?"
+    "What would be the optimum choice of $\\alpha$, so that the block can be pulled with the smallest value of $F$?"
    ]
   },
   {
@@ -1672,47 +1673,47 @@
     "\n",
     "For a body moving in a circle counterclockwise, its motion is represented by:\n",
     "\n",
-    "\\\\[x(t)=Rcos(\\omega t)\\\\]\n",
+    "$$x(t)=R\\cos(\\omega t)$$\n",
     "\n",
-    "\\\\[y(t)=Rsin(\\omega t)\\\\]\n",
+    "$$y(t)=R\\sin(\\omega t)$$\n",
     "\n",
-    "where \\\\(\\omega\\\\) is the angular frequency, and \\\\(R\\\\) is the radius of the circle.\n",
+    "where $\\omega$ is the angular frequency, and $R$ is the radius of the circle.\n",
     "\n",
     "In vector form, this becomes:\n",
     "\n",
-    "\\\\[r(t)=Rcos(\\omega t)\\vec{i}+Rsin(\\omega t)\\vec{j}\\\\]\n",
+    "$$r(t)=R\\cos(\\omega t)\\vec{i}+R\\sin(\\omega t)\\vec{j}$$\n",
     "\n",
     "Velocity vector is obtained by differentiating the position vector:\n",
     "\n",
-    "\\\\[v(t)=-\\omega Rsin(\\omega t)\\vec{i}+\\omega Rcos(\\omega t)\\vec{j}\\\\]\n",
+    "$$v(t)=-\\omega R\\sin(\\omega t)\\vec{i}+\\omega R\\cos(\\omega t)\\vec{j}$$\n",
     "\n",
-    "with magnitude \\\\(|v|=\\omega R\\\\).\n",
+    "with magnitude $|v|=\\omega R$.\n",
     "\n",
     "Acceleration vector is found by differentiating the velocity vector:\n",
     "\n",
-    "\\\\[a(t)=(-\\omega^2Rcos(\\omega t))\\vec{i}+(-\\omega^2Rsin(\\omega t))\\vec{j}\\\\]\n",
+    "$$a(t)=(-\\omega^2R\\cos(\\omega t))\\vec{i}+(-\\omega^2R\\sin(\\omega t))\\vec{j}$$\n",
     "\n",
-    "with magnitude \\\\(|a|=\\omega^2R\\\\). It is called centripetal acceleration, and acts in the direction towards to the centre of the circle.\n",
+    "with magnitude $|a|=\\omega^2R$. It is called centripetal acceleration, and acts in the direction towards to the centre of the circle.\n",
     "\n",
-    "![](images/circular-motion.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/circular-motion.png\" style= \"width: 50%\"></p>\n",
     "\n",
     "### Position, velocity and acceleration in polar coordinates\n",
     "\n",
     "In polar coordinates, position is described by:\n",
     "\n",
-    "\\\\[r(t)=r(t)\\vec{e_R}\\\\]\n",
+    "$$r(t)=r(t)\\vec{e_R}$$\n",
     "\n",
-    "where \\\\(r\\\\) is the distance from the origin (centre of rotation) to the body, and \\\\(\\vec{e_R}\\\\) is a unit vector pointing radially away from the origin.\n",
+    "where $r$ is the distance from the origin (centre of rotation) to the body, and $\\vec{e_R}$ is a unit vector pointing radially away from the origin.\n",
     "\n",
     "Velocity in polar coordinates becomes:\n",
     "\n",
-    "\\\\[v(t)=r'\\vec{e_R}+r\\omega\\vec{e_{\\theta}}\\\\]\n",
+    "$$v(t)=r'\\vec{e_R}+r\\omega\\vec{e_{\\theta}}$$\n",
     "\n",
-    "where \\\\(\\vec{e_{\\theta}}\\\\) is the unit vector rotated anticlockwise from \\\\(\\vec{e_R}\\\\) by \\\\(90˚\\\\).\n",
+    "where $\\vec{e_{\\theta}}$ is the unit vector rotated anticlockwise from $\\vec{e_R}$ by $90˚$.\n",
     "\n",
     "Differentiating velocity, the centripetal acceleration in polar coordinates is found to be:\n",
     "\n",
-    "\\\\[a(t)=(r\"-\\omega^2r)\\vec{e_R}+(2\\omega r'+\\omega'r)\\vec{e_\\theta}\\\\]"
+    "$$a(t)=(r\"-\\omega^2r)\\vec{e_R}+(2\\omega r'+\\omega'r)\\vec{e_\\theta}$$"
    ]
   },
   {
@@ -1721,7 +1722,7 @@
    "source": [
     "## Tutorial Problem 2.6\n",
     "\n",
-    "Imagine a bicycle wheel rotating at constant angular velocity \\\\(\\omega\\\\), with an ant crawling outward along one of the spokes, at a constant speed \\\\(v\\\\) (relative to the spoke). Express the ant’s velocity and acceleration in terms of polar coordinates. Discuss each of the terms."
+    "Imagine a bicycle wheel rotating at constant angular velocity $\\omega$, with an ant crawling outward along one of the spokes, at a constant speed $v$ (relative to the spoke). Express the ant’s velocity and acceleration in terms of polar coordinates. Discuss each of the terms."
    ]
   },
   {
@@ -1810,11 +1811,11 @@
    "source": [
     "## Tutorial Problem 2.7\n",
     "\n",
-    "Consider a small body of mass m, suspended at the end of a “rigid” rod of length \\\\(l\\\\), which is suspended from the ceiling in a manner that allows it to freely swing from left to right.\n",
+    "Consider a small body of mass $m$, suspended at the end of a “rigid” rod of length $l$, which is suspended from the ceiling in a manner that allows it to freely swing from left to right.\n",
     "\n",
-    "The pendulum starts its motion from rest, at an angle \\\\(\\theta_o\\\\). It is shown that the motion was given by \\\\(\\theta(t) = \\theta_ocos(\\omega_{n}t)\\\\), where \\\\(\\omega_n=\\sqrt{\\frac{g}{l}}\\\\) is the natural angular frequency of the mass.\n",
+    "The pendulum starts its motion from rest, at an angle $\\theta_o$. It is shown that the motion was given by $\\theta(t) = \\theta_o\\cos(\\omega_{n}t)$, where $\\omega_n=\\sqrt{\\frac{g}{l}}$ is the natural angular frequency of the mass.\n",
     "\n",
-    "What can you say about the implications of the other governing equation, obtained from Newton’s law in the “r-direction”: \\\\(−T+mg=−m\\omega^2l\\\\)? Since we have already found \\\\(\\theta(t)\\\\), is this other equation irrelevant? If it is not irrelevant, what exactly does it tell us? Carry out your analysis as far as possible. Assuming that the rod will break if the tension it carries becomes too large, at what angle \\\\(\\theta\\\\) might this occur?"
+    "What can you say about the implications of the other governing equation, obtained from Newton’s law in the “r-direction”: $−T+mg=−m\\omega^2l$? Since we have already found $\\theta(t)$, is this other equation irrelevant? If it is not irrelevant, what exactly does it tell us? Carry out your analysis as far as possible. Assuming that the rod will break if the tension it carries becomes too large, at what angle $\\theta$ might this occur?"
    ]
   },
   {
