--- a/notebooks/d_geosciences/seismology/CMP_Common_Mid_Point_Gather.ipynb
+++ b/notebooks/d_geosciences/seismology/CMP_Common_Mid_Point_Gather.ipynb
@@ -21,9 +21,10 @@
     "## What is it?\n",
     "Common mid-point (CMP) gather is a collection of traces that share a common mid-point (often also referred to as CDP, common depth-point, when the layer is horizontal). <br>\n",
     "\n",
-    "<img src=\"images/cmp.png\" style=\"width:300px;height:200px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/cmp.png\" style= \"width: 40%\" align=\"center\"/></p>\n",
     "\n",
     "Different shots have information on the same midpoints. Reordering (sorting) them can produce data with the same midpoints, which provide redundant information on reflection points. The redundancy is exploited in velocity analysis and stacking. \n",
+    "\n",
     "1. Traces are sorted by surface geometry to approximate a single reflection point in the earth. \n",
     "2. Data from several shots and receivers are combined into a single gather. \n",
     "3. The traces are sorted by offset in order to perform velocity analysis for data processing and hyperbolic moveout correction.\n"
@@ -36,13 +37,13 @@
     "## Survey Geometries\n",
     "Survey area is divided into equally sized CMP bins. This process is often referred to “binning”. Traces whose mid-point falls within that bin are assigned to that CMP (with the total number of traces per bin being our survey fold!). This is straightforward for marine surveys with simple geometries, where the CMP bins are usually spaced at half the receiver (group) interval. \n",
     "\n",
-    "$$NF=\\frac{{\\Delta}X_{R}}{2{\\Delta}X_{S}}NC$$\n",
+    "$$\\text{NF}=\\frac{{\\Delta}X_{R}}{2{\\Delta}X_{S}}\\text{NC}$$\n",
     "\n",
-    "where $NF$ is no. of fold; $NC$ is no. of channel; $X_{R}$ is the receiver interval; $X_{S}$ is the source interval.\n",
+    "where $\\text{NF}$ is no. of fold; $\\text{NC}$ is the number of channel; $X_{R}$ is the receiver interval; $X_{S}$ is the source interval.\n",
     "\n",
     "For 3D surveys this will take the form of a regular grid.\n",
     "\n",
-    "<img src=\"images/geom.png\" style=\"width:300px;height:300px\" align=\"center\"/>"
+    "<p style=\"text-align:center;\"><img src=\"images/geom.png\" style= \"width: 50%\" align=\"center\"/></p>"
    ]
   },
   {
@@ -50,7 +51,7 @@
    "metadata": {},
    "source": [
     "### Practice 1\n",
-    "A marine seismic survey is carried out using a shot interval of 20 m, and a cable containing 120 non-overlapping hydrophone groups with a spacing of 10 m. The hydrophones in water are at a depth of 8 meter.\n",
+    "A marine seismic survey is carried out using a shot interval of $20\\,m$, and a cable containing $120$ non-overlapping hydrophone groups with a spacing of $10\\,m$. The hydrophones in water are at a depth of $8\\,m$.\n",
     "- What is the maximum fold of the survey?\n",
     "- What is the midpoint spacing?"
    ]
@@ -109,7 +110,7 @@
     "## Complex Survey Geometries\n",
     "For less simple survey geometries, binning can become a lot more difficult. More complex bin arrangements have to be designed. This may result in irregularly shaped bins, whilst trying to maintain even fold, trace-offset distribution and trace-azimuth distribution throughout the survey area. Complex survey geometries are the most common in land surveying.\n",
     "\n",
-    "<img src=\"images/landgeom.png\" style=\"width:300px;height:300px\" align=\"center\"/>"
+    "<p style=\"text-align:center;\"><img src=\"images/landgeom.png\" style= \"width: 50%\" align=\"center\"/></p>"
    ]
   },
   {
@@ -119,13 +120,6 @@
     "### Reference\n",
     "2022 notes and practical from Lecture 2 of the module ESE 60023 Seismic Processing and Lecture 4 of the module ESE 70015 Advance Seismic Processing."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
