--- a/notebooks/d_geosciences/seismology/Downloading_earthquake_data.ipynb
+++ b/notebooks/d_geosciences/seismology/Downloading_earthquake_data.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "    1970-01-01 01:01:1.01\n",
     "\n",
-    "In this example, we will specify end time to be current date and start time to be 10 years prior:"
+    "In this example, we will specify end time to be current date and start time to be $10$ years prior:"
    ]
   },
   {
@@ -228,9 +228,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The catalogue states that we have over 1000 events recorded by IRIS for given parameters. Now we will want to access the data in the catalogue. \n",
+    "The catalogue states that we have over $1000$ events recorded by IRIS for given parameters. Now we will want to access the data in the catalogue. \n",
     "\n",
-    "[<img src=\"https://docs.obspy.org/_images/Event.png\" style=\"width:600px;\"/>](https://docs.obspy.org/packages/obspy.core.event.html)\n",
+    "[<p style=\"text-align:center;\"><img src=\"https://docs.obspy.org/_images/Event.png\" style= \"width: 70%\"/></p>](https://docs.obspy.org/packages/obspy.core.event.html)\n",
     "\n",
     "If we loop over elements, or _events_ in the Catalogue we can access different information. Below we will extract origin time of the earthquake, its location, depth and magnitude:"
    ]
