--- a/notebooks/d_geosciences/seismology/Ghosting.ipynb
+++ b/notebooks/d_geosciences/seismology/Ghosting.ipynb
@@ -21,7 +21,7 @@
     "## What is it?\n",
     "In marine acquisition, the source and receiver are both towed slightly below the sea surface, this leads to a reflection from the sea surface just above the source receiver. This reflection is refered as \"ghosting\".\n",
     "\n",
-    "<img src=\"images/ghost.png\" style=\"width:300px;height:200px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/ghost.png\" style= \"width: 30%\" align=\"center\"/></p>\n",
     "\n",
     "Ghosting results in a noisier trace. The interaction of these two signals also leads to regular “notches” in the frequency spectrum, which can limit the bandwidth. The location of these notches $f_{n}$ is dependant on the depth $d$ of the source and receivers.\n",
     "\n",
@@ -29,7 +29,7 @@
     "\n",
     "When designing survey, we need to achieve a delicate balance between the depth of the sources and receivers (deeper = quieter!) and the expected location of the notch (deeper = notch at lower frequency i.e. more reduced bandwidth!).\n",
     "\n",
-    "<img src=\"images/notch.png\" style=\"width:300px;height:400px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/notch.png\" style= \"width: 50%\" align=\"center\"/></p>\n",
     "\n",
     "Specific operators can be designed to remove the ghost and balance the amplitude of the frequencies in the ghost notch during processing, Where possible may be more convenient to filter out the notched data."
    ]
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "### Practice 1\n",
-    "Calculate the notch frequency when the receiver is towed at 25 m."
+    "Calculate the notch frequency when the receiver is towed at $25\\,m$."
    ]
   },
   {
@@ -72,22 +72,29 @@
     "## Surface Ghost in Dipole\n",
     "Ghosting can be described by a two-point filter (dipole). Assumes 1D plane waves (i.e. “far field”):\n",
     "\n",
-    "<img src=\"images/dipole.png\" style=\"width:200px;height:150px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/dipole.png\" style= \"width: 20%\" align=\"center\"/></p>\n",
     "\n",
-    "$$G(z)=1+Rz^{\\frac{2d}{v{\\Delta}t}}$$<br>\n",
-    "$$n=\\frac{2d}{v{\\Delta}t};\\:\\:z=e^{-i{\\omega}{\\Delta}t};\\:\\:{\\omega}=2{\\pi}f $$<br>\n",
+    "$$G(z)=1+Rz^{\\frac{2d}{v{\\Delta}t}}$$\n",
+    "\n",
+    "$$n=\\frac{2d}{v{\\Delta}t} \\quad ; \\quad z=\\exp\\left({-i{\\omega}{\\Delta}t}\\right) \\quad ; \\quad {\\omega}=2{\\pi}f $$\n",
+    "\n",
     "In practice $|R| < 1$. We refer $n$ as time index and $z$ as unit time delay. In the following calculation, we assume $R = -1$.\n",
     "\n",
-    "$$G(z)=1-z^{\\frac{2d}{v{\\Delta}t}}$$<br>\n",
-    "$$G(f)=1-e^{-i\\frac{4{\\pi}fd}{v}}$$<br>\n",
-    "$$G(f)=e^{-i\\frac{2{\\pi}fd}{v}}(e^{i\\frac{2{\\pi}fd}{v}}-e^{-i\\frac{2{\\pi}fd}{v}})$$<br>\n",
-    "$$G(f)=2{\\sin}(\\frac{2{\\pi}fd}{v})e^{-i(\\frac{2{\\pi}fd}{v}-\\frac{{\\pi}}{2})}$$<br>\n",
-    "where $2{\\sin}(\\frac{2{\\pi}fd}{v})$ is the amplitude and $e^{-i(\\frac{2{\\pi}fd}{v}-\\frac{{\\pi}}{2})}$ is the phase.\n",
+    "$$G(z)=1-z^{\\frac{2d}{v{\\Delta}t}}$$\n",
+    "\n",
+    "$$G(f)=1-\\exp\\left(-i\\frac{4{\\pi}fd}{v}\\right)$$\n",
+    "\n",
+    "$$G(f)=\\exp\\left(-i\\frac{2{\\pi}fd}{v}\\right) \\left[\\exp\\left(i\\frac{2{\\pi}fd}{v}\\right) - \\exp\\left(-i\\frac{2{\\pi}fd}{v}\\right)\\right]$$\n",
+    "\n",
+    "$$G(f)=2\\sin\\left(\\frac{2{\\pi}fd}{v}\\right) \\exp\\left[-i\\left(\\frac{2{\\pi}fd}{v}-\\frac{{\\pi}}{2}\\right)\\right]$$\n",
+    "\n",
+    "where $2\\sin\\left(\\frac{2{\\pi}fd}{v}\\right)$ is the amplitude and $\\exp\\left[-i\\left(\\frac{2{\\pi}fd}{v}-\\frac{{\\pi}}{2}\\right)\\right]$ is the phase.\n",
     "\n",
     "The amplitude spectrum is \n",
-    "$$|G(f)|=2|{\\sin}(\\frac{2{\\pi}fd}{v})|$$\n",
     "\n",
-    "<img src=\"images/gf.png\" style=\"width:400px;height:300px\" align=\"center\"/>"
+    "$$|G(f)|=2\\left|\\sin\\left(\\frac{2{\\pi}fd}{v}\\right)\\right|$$\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"images/gf.png\" style= \"width: 40%\" align=\"center\"/></p>"
    ]
   },
   {
@@ -95,18 +102,20 @@
    "metadata": {},
    "source": [
     "### Practice 2\n",
-    "If the Fourier Transform of the operator G(z) is\n",
+    "If the Fourier Transform of the operator $G(z)$ is\n",
     "\n",
-    "$$G(f)=2{\\sin}(\\frac{2{\\pi}fd}{v})e^{-i(\\frac{2{\\pi}fd}{v}-\\frac{{\\pi}}{2})}$$<br>\n",
-    "Calculate the first and second notch frequency for a streamer at depth 5 m and using a velocity of water of 1500 m/sec. "
+    "$$G(f)=2\\sin\\left(\\frac{2{\\pi}fd}{v}\\right) \\exp\\left[-i\\left(\\frac{2{\\pi}fd}{v}-\\frac{{\\pi}}{2}\\right)\\right]$$\n",
+    "\n",
+    "Calculate the first and second notch frequency for a streamer at depth $5\\,m$ and using a velocity of water of $1500\\,m/s$. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\frac{2{\\pi}f_{n}d}{v}=k{\\pi},\\:\\:k=0,1,2...$<br><br>\n",
-    "$f_{n}=k\\frac{v}{2d}$"
+    "$$\\frac{2{\\pi}f_{n}d}{v}=k{\\pi}\\quad,\\quad k=0,1,2...$$\n",
+    "\n",
+    "$$f_{n}=k\\frac{v}{2d}$$"
    ]
   },
   {
@@ -141,13 +150,6 @@
     "### Reference\n",
     "2022 notes and practical from Lecture 3 of the module ESE 60023 Seismic Processing and Lecture 1 of the module ESE 70015 Advance Seismic Processing."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
