--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Pourbaix_Diagram.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Pourbaix_Diagram.ipynb
@@ -46,7 +46,7 @@
     "   * Ecology\n",
     "   * etc.\n",
     "   \n",
-    "![](images/PD1.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/PD1.png\" style= \"width: 50%\"></p>\n",
     "\n",
     "Consider a generic “half cell” reduction reaction including $H^+$:\n",
     "\n",
