--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Reaction_Quotients.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Reaction_Quotients.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "hide-input"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-input"
@@ -162,42 +162,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_f426d_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Species/Compounds</th>        <th class=\"col_heading level0 col1\" >$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_54bb7_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Species/Compounds</th>        <th class=\"col_heading level0 col1\" >$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col2\" >$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$</th>        <th class=\"col_heading level0 col3\" >$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_f426d_row0_col0\" class=\"data row0 col0\" >$$Ca^{2+}$$</td>\n",
-       "                        <td id=\"T_f426d_row0_col1\" class=\"data row0 col1\" >-552.80</td>\n",
-       "                        <td id=\"T_f426d_row0_col2\" class=\"data row0 col2\" >-543.00</td>\n",
-       "                        <td id=\"T_f426d_row0_col3\" class=\"data row0 col3\" >-56.20</td>\n",
+       "                                <td id=\"T_54bb7_row0_col0\" class=\"data row0 col0\" >$$Ca^{2+}$$</td>\n",
+       "                        <td id=\"T_54bb7_row0_col1\" class=\"data row0 col1\" >-552.8</td>\n",
+       "                        <td id=\"T_54bb7_row0_col2\" class=\"data row0 col2\" >-543</td>\n",
+       "                        <td id=\"T_54bb7_row0_col3\" class=\"data row0 col3\" >-56.2</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_f426d_row1_col0\" class=\"data row1 col0\" >$$SO_4^{2-}$$</td>\n",
-       "                        <td id=\"T_f426d_row1_col1\" class=\"data row1 col1\" >-744.00</td>\n",
-       "                        <td id=\"T_f426d_row1_col2\" class=\"data row1 col2\" >-909.34</td>\n",
-       "                        <td id=\"T_f426d_row1_col3\" class=\"data row1 col3\" >18.50</td>\n",
+       "                                <td id=\"T_54bb7_row1_col0\" class=\"data row1 col0\" >$$SO_4^{2-}$$</td>\n",
+       "                        <td id=\"T_54bb7_row1_col1\" class=\"data row1 col1\" >-744</td>\n",
+       "                        <td id=\"T_54bb7_row1_col2\" class=\"data row1 col2\" >-909.34</td>\n",
+       "                        <td id=\"T_54bb7_row1_col3\" class=\"data row1 col3\" >18.5</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_f426d_row2_col0\" class=\"data row2 col0\" >$$H_2O$$</td>\n",
-       "                        <td id=\"T_f426d_row2_col1\" class=\"data row2 col1\" >-237.14</td>\n",
-       "                        <td id=\"T_f426d_row2_col2\" class=\"data row2 col2\" >-285.83</td>\n",
-       "                        <td id=\"T_f426d_row2_col3\" class=\"data row2 col3\" >69.95</td>\n",
+       "                                <td id=\"T_54bb7_row2_col0\" class=\"data row2 col0\" >$$H_2O$$</td>\n",
+       "                        <td id=\"T_54bb7_row2_col1\" class=\"data row2 col1\" >-237.14</td>\n",
+       "                        <td id=\"T_54bb7_row2_col2\" class=\"data row2 col2\" >-285.83</td>\n",
+       "                        <td id=\"T_54bb7_row2_col3\" class=\"data row2 col3\" >69.95</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_f426d_row3_col0\" class=\"data row3 col0\" >$$(CaSO_4\\cdot2H_2O)_{gypsum}$$</td>\n",
-       "                        <td id=\"T_f426d_row3_col1\" class=\"data row3 col1\" >-1797.36</td>\n",
-       "                        <td id=\"T_f426d_row3_col2\" class=\"data row3 col2\" >-2022.92</td>\n",
-       "                        <td id=\"T_f426d_row3_col3\" class=\"data row3 col3\" >193.90</td>\n",
+       "                                <td id=\"T_54bb7_row3_col0\" class=\"data row3 col0\" >$$(CaSO_4\\cdot2H_2O)_{gypsum}$$</td>\n",
+       "                        <td id=\"T_54bb7_row3_col1\" class=\"data row3 col1\" >-1797.36</td>\n",
+       "                        <td id=\"T_54bb7_row3_col2\" class=\"data row3 col2\" >-2022.92</td>\n",
+       "                        <td id=\"T_54bb7_row3_col3\" class=\"data row3 col3\" >193.9</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x201f5377f70>"
+       "<pandas.io.formats.style.Styler at 0x1ae459d83a0>"
       ]
      },
      "metadata": {},
@@ -220,9 +220,9 @@
     "    '$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$' : S_data,\n",
     "}\n",
     "df1 = pd.DataFrame(dict1)\n",
-    "df1.loc[:, '$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$'] = df1['$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$'].map('{:.2f}'.format)\n",
-    "df1.loc[:, '$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$'] = df1['$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$'].map('{:.2f}'.format)\n",
-    "df1.loc[:, '$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$'] = df1['$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$'].map('{:.2f}'.format)\n",
+    "df1.loc[:, '$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$'] = df1['$$\\Delta {G_f}^\\circ\\,(kJ\\,mol^{-1})$$'].map('{:g}'.format)\n",
+    "df1.loc[:, '$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$'] = df1['$$\\Delta {H_f}^\\circ\\,(kJ\\,mol^{-1})$$'].map('{:g}'.format)\n",
+    "df1.loc[:, '$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$'] = df1['$$S^\\circ\\,(J\\,mol^{-1}K^{-1})$$'].map('{:g}'.format)\n",
     "display(df1.style.hide_index())"
    ]
   },
@@ -310,11 +310,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(ii) Substitute values in the integrated van’t Hoff equation given above and calculate the new $K_{sp,T}$. Convert your answer to log-base 10.\n",
+    "(ii) Substitute values in the integrated van’t Hoff equation given above and calculate the new $K_{sp,T}$. Convert your answer to log-base $10$.\n",
     "\n",
     "$$\\ln K_{sp, T} = \\ln (10^{-4.60}) + \\frac{-1.08}{8.314 \\times 10^{-3}} \\left(\\frac{1}{25+273.15} - \\frac{1}{40+273.15} \\right) = -10.61$$\n",
     "\n",
-    "Converting to log-base 10:\n",
+    "Converting to log-base $10$:\n",
     "\n",
     "$$\\log K_{sp, T} = \\frac{\\ln K_{sp, T}}{\\ln(10)} = -4.61$$\n",
     "\n",
@@ -398,7 +398,7 @@
     "\n",
     "$$K_{sp}^o = \\frac{a_{Ca^{2+}} \\cdot a_{SO_4^{2-}} \\cdot a_{H_2O}^2}{a_{CaSO_4 \\cdot 2H_2O}}$$\n",
     "\n",
-    "Since the activity of pure solids and pure liquids are 1 by definition, $a_{CaSO_4 \\cdot 2H_2O} = 1$ and $a_{H_2O}^2 = 1$.\n",
+    "Since the activity of pure solids and pure liquids are $1$ by definition, $a_{CaSO_4 \\cdot 2H_2O} = 1$ and $a_{H_2O}^2 = 1$.\n",
     "\n",
     "To know if the solution is at equilibrium, we can take the ratio between the two constants:\n",
     "\n",
@@ -411,7 +411,7 @@
     "\n",
     "$$\\frac{Q_{sp}^o}{K_{sp}^o} = \\frac{10^{-3} \\cdot 10^{-2}}{10^{-4.60}} = 10^{-0.4} < 1$$\n",
     "\n",
-    "This number is less than 1, so the solution is undersaturated with respect to gypsum and it will therefore dissolve. "
+    "This number is less than $1$, so the solution is undersaturated with respect to gypsum and it will therefore dissolve. "
    ]
   },
   {
