--- a/notebooks/d_geosciences/Low-Temperature Geochemistry/Stability_Diagram.ipynb
+++ b/notebooks/d_geosciences/Low-Temperature Geochemistry/Stability_Diagram.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "hide-input"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,51 +97,51 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_2cc4e_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Chemical formula of compound or species</th>        <th class=\"col_heading level0 col1\" >Name</th>        <th class=\"col_heading level0 col2\" >$G_{f}^{o}$</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_cf1c9_\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Chemical formula of compound or species</th>        <th class=\"col_heading level0 col1\" >Name</th>        <th class=\"col_heading level0 col2\" >$G_{f}^{o}$</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_2cc4e_row0_col0\" class=\"data row0 col0\" >$NaAlSi_{3}O_{8}$</td>\n",
-       "                        <td id=\"T_2cc4e_row0_col1\" class=\"data row0 col1\" >Albite (low albite)</td>\n",
-       "                        <td id=\"T_2cc4e_row0_col2\" class=\"data row0 col2\" >-3712</td>\n",
+       "                                <td id=\"T_cf1c9_row0_col0\" class=\"data row0 col0\" >$NaAlSi_{3}O_{8}$</td>\n",
+       "                        <td id=\"T_cf1c9_row0_col1\" class=\"data row0 col1\" >Albite (low albite)</td>\n",
+       "                        <td id=\"T_cf1c9_row0_col2\" class=\"data row0 col2\" >-3712</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row1_col0\" class=\"data row1 col0\" >$Al_{2}Si_{2}O_{5}(OH)_{4}$</td>\n",
-       "                        <td id=\"T_2cc4e_row1_col1\" class=\"data row1 col1\" >Kaolinite</td>\n",
-       "                        <td id=\"T_2cc4e_row1_col2\" class=\"data row1 col2\" >-3778</td>\n",
+       "                                <td id=\"T_cf1c9_row1_col0\" class=\"data row1 col0\" >$Al_{2}Si_{2}O_{5}(OH)_{4}$</td>\n",
+       "                        <td id=\"T_cf1c9_row1_col1\" class=\"data row1 col1\" >Kaolinite</td>\n",
+       "                        <td id=\"T_cf1c9_row1_col2\" class=\"data row1 col2\" >-3778</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row2_col0\" class=\"data row2 col0\" >$Na_{0.33}Al_{2}(Si_{3.67}Al_{0.33})O_{10}(OH)_{2}$</td>\n",
-       "                        <td id=\"T_2cc4e_row2_col1\" class=\"data row2 col1\" >Na-beidellite</td>\n",
-       "                        <td id=\"T_2cc4e_row2_col2\" class=\"data row2 col2\" >-5354</td>\n",
+       "                                <td id=\"T_cf1c9_row2_col0\" class=\"data row2 col0\" >$Na_{0.33}Al_{2}(Si_{3.67}Al_{0.33})O_{10}(OH)_{2}$</td>\n",
+       "                        <td id=\"T_cf1c9_row2_col1\" class=\"data row2 col1\" >Na-beidellite</td>\n",
+       "                        <td id=\"T_cf1c9_row2_col2\" class=\"data row2 col2\" >-5354</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row3_col0\" class=\"data row3 col0\" >$Al(OH)_3$</td>\n",
-       "                        <td id=\"T_2cc4e_row3_col1\" class=\"data row3 col1\" >Gibbsite</td>\n",
-       "                        <td id=\"T_2cc4e_row3_col2\" class=\"data row3 col2\" >-1144</td>\n",
+       "                                <td id=\"T_cf1c9_row3_col0\" class=\"data row3 col0\" >$Al(OH)_3$</td>\n",
+       "                        <td id=\"T_cf1c9_row3_col1\" class=\"data row3 col1\" >Gibbsite</td>\n",
+       "                        <td id=\"T_cf1c9_row3_col2\" class=\"data row3 col2\" >-1144</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row4_col0\" class=\"data row4 col0\" >$H^+$</td>\n",
-       "                        <td id=\"T_2cc4e_row4_col1\" class=\"data row4 col1\" >Hydrogen ion</td>\n",
-       "                        <td id=\"T_2cc4e_row4_col2\" class=\"data row4 col2\" >0</td>\n",
+       "                                <td id=\"T_cf1c9_row4_col0\" class=\"data row4 col0\" >$H^+$</td>\n",
+       "                        <td id=\"T_cf1c9_row4_col1\" class=\"data row4 col1\" >Hydrogen ion</td>\n",
+       "                        <td id=\"T_cf1c9_row4_col2\" class=\"data row4 col2\" >0</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row5_col0\" class=\"data row5 col0\" >$H_{2}O(l)$</td>\n",
-       "                        <td id=\"T_2cc4e_row5_col1\" class=\"data row5 col1\" >Water</td>\n",
-       "                        <td id=\"T_2cc4e_row5_col2\" class=\"data row5 col2\" >-237.2</td>\n",
+       "                                <td id=\"T_cf1c9_row5_col0\" class=\"data row5 col0\" >$H_{2}O(l)$</td>\n",
+       "                        <td id=\"T_cf1c9_row5_col1\" class=\"data row5 col1\" >Water</td>\n",
+       "                        <td id=\"T_cf1c9_row5_col2\" class=\"data row5 col2\" >-237.2</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row6_col0\" class=\"data row6 col0\" >$Na^{+}(aq)$</td>\n",
-       "                        <td id=\"T_2cc4e_row6_col1\" class=\"data row6 col1\" >Sodium ion</td>\n",
-       "                        <td id=\"T_2cc4e_row6_col2\" class=\"data row6 col2\" >-261.7</td>\n",
+       "                                <td id=\"T_cf1c9_row6_col0\" class=\"data row6 col0\" >$Na^{+}(aq)$</td>\n",
+       "                        <td id=\"T_cf1c9_row6_col1\" class=\"data row6 col1\" >Sodium ion</td>\n",
+       "                        <td id=\"T_cf1c9_row6_col2\" class=\"data row6 col2\" >-261.7</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                                <td id=\"T_2cc4e_row7_col0\" class=\"data row7 col0\" >$H_{4}SiO_{4}$</td>\n",
-       "                        <td id=\"T_2cc4e_row7_col1\" class=\"data row7 col1\" >Dissolved silica</td>\n",
-       "                        <td id=\"T_2cc4e_row7_col2\" class=\"data row7 col2\" >-1316</td>\n",
+       "                                <td id=\"T_cf1c9_row7_col0\" class=\"data row7 col0\" >$H_{4}SiO_{4}$</td>\n",
+       "                        <td id=\"T_cf1c9_row7_col1\" class=\"data row7 col1\" >Dissolved silica</td>\n",
+       "                        <td id=\"T_cf1c9_row7_col2\" class=\"data row7 col2\" >-1316</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1d5be99abe0>"
+       "<pandas.io.formats.style.Styler at 0x262a4e82550>"
       ]
      },
      "metadata": {},
@@ -160,17 +160,17 @@
     "             \"$Na^{+}(aq)$\",\n",
     "             \"$H_{4}SiO_{4}$\"]\n",
     "names = [\"Albite (low albite)\", \"Kaolinite\", \"Na-beidellite\", \"Gibbsite\", \"Hydrogen ion\", \"Water\", \"Sodium ion\", \"Dissolved silica\"]\n",
-    "std_Gf_str = [\"-3712\", \"-3778\", \"-5354\", \"-1144\", \"0\", \"-237.2\", \"-261.7\", \"-1316\"]\n",
-    "std_Gf_num = [float(G) for G in std_Gf_str]  # kJ/mol\n",
+    "std_Gf = [-3712, -3778, -5354, -1144, 0, -237.2, -261.7, -1316]  # kJ/mol\n",
     "\n",
-    "dict = {'Chemical formula of compound or species' : compounds,\n",
+    "dict1 = {'Chemical formula of compound or species' : compounds,\n",
     "        'Name' : names,\n",
-    "       '$G_{f}^{o}$' : std_Gf_str}\n",
-    "df = pd.DataFrame(dict)\n",
+    "       '$G_{f}^{o}$' : std_Gf}\n",
+    "df1 = pd.DataFrame(dict1)\n",
+    "df1.loc[:, '$G_{f}^{o}$'] = df1['$G_{f}^{o}$'].map('{:g}'.format)\n",
     "  \n",
     "print(\"Table 1: Thermodynamic data from P. Ryan's book, p278.\")\n",
     "# displaying the DataFrame\n",
-    "display(df.style.hide_index())"
+    "display(df1.style.hide_index())"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +201,8 @@
     "# Delta_Gr = (kaolinite + 2 Na ion + 4 dissolved silica) - (2 albite + 2 H ion + 9 water)\n",
     "\n",
     "# calculate Delta_Gr\n",
-    "Delta_Gr = ((1*std_Gf_num[names.index(\"Kaolinite\")] + 2*std_Gf_num[names.index(\"Sodium ion\")] + 4*std_Gf_num[names.index(\"Dissolved silica\")]) - \n",
-    "                 (2*std_Gf_num[names.index(\"Albite (low albite)\")] + 2*std_Gf_num[names.index(\"Hydrogen ion\")] + 9*std_Gf_num[names.index(\"Water\")]))\n",
+    "Delta_Gr = ((1*std_Gf[names.index(\"Kaolinite\")] + 2*std_Gf[names.index(\"Sodium ion\")] + 4*std_Gf[names.index(\"Dissolved silica\")]) - \n",
+    "                 (2*std_Gf[names.index(\"Albite (low albite)\")] + 2*std_Gf[names.index(\"Hydrogen ion\")] + 9*std_Gf[names.index(\"Water\")]))\n",
     "print(f\"The Gibbs free energy of the reaction is {Delta_Gr:.1f} kJ.\")"
    ]
   },
@@ -250,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d5c17052b0>"
+       "<matplotlib.legend.Legend at 0x262a831e310>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d5c16c4a60>"
+       "<matplotlib.legend.Legend at 0x262a81d1fd0>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -365,7 +365,7 @@
    "source": [
     "The stability diagram above is a simplified version, acquired from the given information. A more complex version of it is shown in Figure 1 below.\n",
     "\n",
-    "![](images/SD1.png)\n",
+    "<p style=\"text-align:center;\"><img src=\"images/SD1.png\" style= \"width: 50%\"></p>\n",
     "\n",
     "$\\quad$Figure 1: A mineral stability diagram showing stability fields for gibbsite, kaolinite, Na-beidellite (smectite), and albite at $25^\\circ C$ and $1\\,atm$ (Ryan, 2019)."
    ]
