--- a/notebooks/d_geosciences/Miscellaneous/Longitude_Latitude_Degree_Convertion.ipynb
+++ b/notebooks/d_geosciences/Miscellaneous/Longitude_Latitude_Degree_Convertion.ipynb
@@ -32,10 +32,10 @@
     "\n",
     "Latitude is the angular distance of a place north or south of the earth's equator, or of the equator of a celestial object, usually expressed in degrees, minutes and seconds.\n",
     "\n",
-    "1 degree latitude is about 111 km anywhere on earth.\n",
+    "$1$ degree latitude is about $111\\,km$ anywhere on earth.\n",
     "\n",
-    "Lines of latitude are numbered from 0° at the equator to 90°N or +90 at the North Pole.\n",
-    "Lines of latitude are numbered from 0° at the equator to 90°S or -90 at the South Pole."
+    "Lines of latitude are numbered from $0°$ at the equator to $90°N$ or $+90$ at the North Pole.\n",
+    "Lines of latitude are numbered from $0°$ at the equator to $90°S$ or $-90$ at the South Pole."
    ]
   },
   {
@@ -71,16 +71,17 @@
     "```{index} Longitude\n",
     "```\n",
     "\n",
-    "The distance of 1 degree longitude varies from 111 km at equator to 0 at poles, half way approx. = 55.8 km at 60 degrees latitude. \n",
+    "The distance of $1$ degree longitude varies from $111\\,km$ at equator to $0$ at poles, half way approx. = $55.8\\,km$ at $60$ degrees latitude. \n",
     "\n",
-    "Longitude varies as cosθ, where θ is the latitude (e.g. long at 80°N = 111cos(80°) = 19km)\n",
+    "Longitude varies as $\\cos \\theta$, where $\\theta$ is the latitude (e.g. long at $80°N = 111\\cos(80°) = 19\\,km$)\n",
     "\n",
     "Lines of longitude begin at the Prime Meridian (Greenwich).\n",
     "\n",
-    "60° W is the 60° line of longitude west of the Prime Meridian. Is also written as -60°\n",
-    "60° E is the 60° line of longitude east of the Prime Meridian. Is also written as +60°\n",
+    "$60°W$ is the $60°$ line of longitude west of the Prime Meridian. Is also written as $-60°$\n",
     "\n",
-    "Sometimes you will see longitude on a scale 0° to 360°. The scale is measured clockwise (so 10°W == 350° == -10°)"
+    "$60°E$ is the $60°$ line of longitude east of the Prime Meridian. Is also written as $+60°$\n",
+    "\n",
+    "Sometimes you will see longitude on a scale $0°$ to $360°$. The scale is measured clockwise (so $10°W == 350° == -10°$)"
    ]
   },
   {
@@ -179,14 +180,17 @@
    "metadata": {},
    "source": [
     "## Degree Notation\n",
-    "One degree is equal to 60 minutes and equal to 3600 seconds:<br>\n",
-    "$$ 1° = 60' = 3600\" $$\n",
+    "One degree is equal to $60$ minutes and equal to $3600$ seconds:\n",
     "\n",
-    "One minute is equal to 1/60 degrees:<br>\n",
+    "$$ 1° = 60' = 3600'' $$\n",
+    "\n",
+    "One minute is equal to $1/60$ degrees:\n",
+    "\n",
     "$$1' = (1/60)° = 0.01666667°$$\n",
     "\n",
-    "One second is equal to 1/3600 degrees:<br>\n",
-    "$$1\" = (1/3600)° = 2.77778e-4° = 0.000277778°$$"
+    "One second is equal to $1/3600$ degrees:\n",
+    "\n",
+    "$$1'' = (1/3600)° = 2.77778e-4° = 0.000277778°$$"
    ]
   },
   {
