--- a/notebooks/d_geosciences/Tectonics of the Ocean/Plate_Models.ipynb
+++ b/notebooks/d_geosciences/Tectonics of the Ocean/Plate_Models.ipynb
@@ -21,16 +21,19 @@
    "source": [
     "## Half-space Cooling Model\n",
     "\n",
-    "<img src=\"images/halfspace_cooling_model.png\" style=\"width:500px;height:250px\" align=\"center\"/><br>\n",
-    "Heat equation is as follow: <br><br>\n",
-    "$$ \\frac{\\partial^{2}T}{\\partial x^{2}} + \\frac{\\partial^{2}T}{\\partial z^{2}} = \\frac{v}{\\kappa}\\:\\frac{\\partial{T}}{\\partial x} $$\n",
+    "<p style=\"text-align:center;\"><img src=\"images/halfspace_cooling_model.png\" style= \"width: 60%\"></p>\n",
     "\n",
-    "where $T$ is temperature and $\\kappa$ is the thermal diffusivity. The first term represents the lateral diffusion of heat, the second term represents the vertical diffusion of heat, and the third term (on the right side) is the advection of heat by the motion of the plate.<br>\n",
+    "Heat equation is as follow:\n",
     "\n",
-    "Away from the ridge axis ($x$ >> 0), one can show that the lateral heat diffusion is much smaller than the vertical heat diffusion. As this is a 2-dimensional problem with no heat sources so the heat equation has only diffusive and advective terms:<br><br>\n",
-    "$$\\frac{\\partial^{2}T}{\\partial z^{2}} = \\frac{v}{\\kappa}\\:\\frac{\\partial{T}}{\\partial x} $$ \n",
+    "$$ \\frac{\\partial^{2}T}{\\partial x^{2}} + \\frac{\\partial^{2}T}{\\partial z^{2}} = \\frac{v}{\\kappa} \\frac{\\partial{T}}{\\partial x} $$\n",
     "\n",
-    "Dropping this term simplifies the differential equation. The boundary and initial conditions are:<br>\n",
+    "where $T$ is temperature and $\\kappa$ is the thermal diffusivity. The first term represents the lateral diffusion of heat, the second term represents the vertical diffusion of heat, and the third term (on the right side) is the advection of heat by the motion of the plate.\n",
+    "\n",
+    "Away from the ridge axis ($x >> 0$), one can show that the lateral heat diffusion is much smaller than the vertical heat diffusion. As this is a 2D problem with no heat sources so the heat equation has only diffusive and advective terms:\n",
+    "\n",
+    "$$\\frac{\\partial^{2}T}{\\partial z^{2}} = \\frac{v}{\\kappa} \\frac{\\partial{T}}{\\partial x} $$ \n",
+    "\n",
+    "Dropping this term simplifies the differential equation. The boundary and initial conditions are:\n",
     "\n",
     "$$T(0,t) = T_{0}$$\n",
     "$$T({\\infty},t) = T_{m}$$\n",
@@ -38,19 +41,19 @@
     "\n",
     "The inifinite half-space has constant thermal diffusivity and an initially constant temperature $T_{m}$. At times greater than zero, the surface temperature reduced to $T_{0}$. The temperature will evolve with time. Note for this problem, time also corresponds to the age of the cooling oceanic lithosphere.\n",
     "\n",
-    "The solution of the half-space cooling equation is:<br>\n",
+    "The solution of the half-space cooling equation is:\n",
     "\n",
-    "$$T(z,t) = (T_{m} - T_{0})\\:erf\\left(\\frac{z}{2\\sqrt{\\kappa t}}\\right) + T_{0}$$\n",
+    "$$T(z,t) = (T_{m} - T_{0}) \\text{erf}\\left(\\frac{z}{2\\sqrt{\\kappa t}}\\right) + T_{0}$$\n",
     "\n",
-    "where $T_{m}$ is the temperature of mantle/asthenosphere, $T_{0}$ is the surface temperature, $T_{z}$ is the temperature at depth $z$, $t$ is the age of the lithosphere, $\\kappa$ is the thermal diffusivity (~$10^{-6}\\: Wm^{-1}K^{-1}$)\n",
+    "where $T_{m}$ is the temperature of mantle/asthenosphere, $T_{0}$ is the surface temperature, $T_{z}$ is the temperature at depth $z$, $t$ is the age of the lithosphere, $\\kappa$ is the thermal diffusivity (~$10^{-6}\\,W\\,m^{-1}K^{-1}$)\n",
     "\n",
-    "The definition of the error function $erf(x)$:<br>\n",
+    "The definition of the error function $\\text{erf}(x)$:\n",
     "\n",
-    "$$erf(x) = \\frac{2}{\\sqrt{\\pi}}\\int_{x}^{0} e^{-t^{2}} dt \\$$\n",
+    "$$\\text{erf}(x) = \\frac{2}{\\sqrt{\\pi}}\\int_{x}^{0} e^{-t^{2}}\\,dt \\$$\n",
     "\n",
     "Error function table\n",
     "\n",
-    "<img src=\"images/erf_table.png\" style=\"width:500px;height:500px\" align=\"center\"/><br>"
+    "<p style=\"text-align:center;\"><img src=\"images/erf_table.png\" style= \"width: 60%\"></p>"
    ]
   },
   {
@@ -58,10 +61,7 @@
    "metadata": {},
    "source": [
     "### Practical 3.2\n",
-    "Calculate the $60 Ma$ geotherm $T_{z}$ in the oceanic lithosphere for the half-space cooling model.\n",
-    "What is the thickness of $60Ma$ oceanic lithosphere? Use a surface temperature of $0°C$; an\n",
-    "asthenospheric temperature of $1300°C$; and a temperature of $1150°C$ for the base of the lithosphere.\n",
-    "Assume a thermal conductivity $\\kappa$ of $10^{-6}\\: Wm^{-1}K^{-1}$"
+    "Calculate the $60\\,\\text{Ma}$ geotherm $T_{z}$ in the oceanic lithosphere for the half-space cooling model. What is the thickness of $60\\,\\text{Ma}$ oceanic lithosphere? Use a surface temperature of $0°C$; an asthenospheric temperature of $1300°C$; and a temperature of $1150°C$ for the base of the lithosphere. Assume a thermal conductivity $\\kappa$ of $10^{-6}\\,W\\,m^{-1}K^{-1}$"
    ]
   },
   {
@@ -115,30 +115,35 @@
     "## Isotasy Model\n",
     "The model assumes that the lithosphere is a simply cooled asthenosphere.\n",
     "\n",
-    "<img src=\"images/isostasy_model.png\" style=\"width:500px;height:250px\" align=\"center\"/><br>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/isostasy_model.png\" style= \"width: 60%\"></p>\n",
+    "\n",
     "The two columns shown are isostatically balanced. They have the same mass per unit area, because the older column contains water to offset the added weight of dense lithospheric rock.\n",
+    "\n",
     "## Half-space Model\n",
     "We can now use a heat conduction formulation and isostatic balancing and calculate the masses per unit area in these two columns to derive a formula for the depth of the ocean floor $w$ as a function of age $t$ . The solution will be applicable to columns of all ages.\n",
     "\n",
-    "Depth ($w$) vs. age ($t$) for the ocean floor:<br><br>\n",
-    "$$w = w_{0} + \\frac{2 {\\rho}_{a}\\:{\\alpha}_{v}\\:T_{a}}{{\\rho}_{a}\\:{\\rho}_{w}}\\sqrt{\\frac{{\\kappa}t}{\\pi}}$$\n",
+    "Depth ($w$) vs. age ($t$) for the ocean floor:\n",
     "\n",
-    "By using the following values,<br><br>\n",
-    "${\\rho}_{w} = 1000\\:kg\\:m^{-3}$ (density of water)<br>\n",
-    "${\\rho}_{a} = 3300\\:kg\\:m^{-3}$ (density of top asthenosphere)<br>\n",
-    "${\\alpha} = 3 \\times 10^{-5}\\:°C^{-1}$ (coefficient of thermal expansion)<br>\n",
-    "${\\kappa} = 10^{-6}\\:m^{2}\\:s^{-1}$ (thermal conductivity)<br>\n",
-    "$T_{a} = 1300\\:°C$ (temperature at the base of the plate)<br>\n",
-    "$w_{0} = 2500\\:m$ (depth of ridge)<br>\n",
+    "$$w = w_{0} + \\frac{2 {\\rho}_{a} {\\alpha}_{v} T_{a}}{{\\rho}_{a} {\\rho}_{w}}\\sqrt{\\frac{{\\kappa}t}{\\pi}}$$\n",
     "\n",
-    "we can obtain a simplified formula as given by (Parson and Sclater, 1997):<br><br>\n",
-    "$$w = 2500 + 350\\sqrt{t}$$<br>\n",
+    "By using the following values,\n",
     "\n",
-    "This formula satisties observational constrains quite well for ocean crust younger than 80 ma. Note: $w$ = depth of ocean floor = water depth\n",
+    "${\\rho}_{w} = 1000\\,kg\\,m^{-3}$ (density of water)<br>\n",
+    "${\\rho}_{a} = 3300\\,kg\\,m^{-3}$ (density of top asthenosphere)<br>\n",
+    "${\\alpha} = 3 \\times 10^{-5}\\,°C^{-1}$ (coefficient of thermal expansion)<br>\n",
+    "${\\kappa} = 10^{-6}\\,m^{2}\\,s^{-1}$ (thermal conductivity)<br>\n",
+    "$T_{a} = 1300\\,°C$ (temperature at the base of the plate)<br>\n",
+    "$w_{0} = 2500\\,m$ (depth of ridge)<br>\n",
     "\n",
-    "<img src=\"images/halfspace_model.png\" style=\"width:310px;height:300px\" align=\"center\"/><br>\n",
+    "we can obtain a simplified formula as given by (Parson and Sclater, 1997):\n",
     "\n",
-    "The ocean depth with age curve \"flattens\" for ages older than 80-100 Ma, i.e. the observed subsidence is smaller than expected from the half-space cooling model. One possibility to explain the observed \"flattening“ is that by some means there is more heat beneath old lithosphere than predicted by the half-space cooling model.\n",
+    "$$w = 2500 + 350\\sqrt{t}$$\n",
+    "\n",
+    "This formula satisties observational constrains quite well for ocean crust younger than $80\\,\\text{Ma}$. Note: $w$ = depth of ocean floor = water depth\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"images/halfspace_model.png\" style= \"width: 40%\">\n",
+    "\n",
+    "The ocean depth with age curve \"flattens\" for ages older than $80$-$100$ $\\text{Ma}$, i.e. the observed subsidence is smaller than expected from the half-space cooling model. One possibility to explain the observed \"flattening\" is that by some means there is more heat beneath old lithosphere than predicted by the half-space cooling model.\n",
     "\n",
     "Possible mechanisms include:\n",
     "1. small scale convection,\n",
@@ -189,18 +194,21 @@
     "## Stein and Stein Plate Model\n",
     "A popular alternative to the half-space cooling model is the so-called plate (PSM) model first proposed by Parsons and Sclater (1977) and refined to GDH1 model by Stein & Stein (1992):\n",
     "\n",
-    "<img src=\"images/thermal_model.png\" style=\"width:600px;height:200px\" align=\"center\"/><br>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/thermal_model.png\" style= \"width: 60%\">\n",
     "\n",
     "For the plate model beyond a critical age the lithosphere is assumed to be a constant thickness $L$, with a constant temperature $T_{a}$ at its base. The proposed mechanism for the required supply of heat is small-scale convection in a lower thermal boundary layer.\n",
     "\n",
     "The subsidence is obtained by isostatic balancing:\n",
     "\n",
-    "$$w = w_{final} - T_{m}L\\frac{{\\rho}_{a}}{{\\rho}_{a}-{\\rho}_{w}}4{\\alpha}\\:\\sum_{n=1,3,5,...} \\frac{1}{n^{2}{\\pi}^{2}}exp\\left(-\\frac{n^{2}{\\pi}^{2}{\\kappa}t}{L^{2}}\\right)$$<br>\n",
-    "$$= 6400 - 3200\\:exp^{-(t/62.8)}\\:\\:\\:for\\: t > 20 ma$$ <br>\n",
-    "where $w_{final}$ is the equilibrium depth (Parsons and Sclater, 1977).\n",
+    "$$w = w_{\\text{final}} - T_{m}L\\left(\\frac{{\\rho}_{a}}{{\\rho}_{a}-{\\rho}_{w}}\\right)4{\\alpha} \\sum_{n=1,3,5,...} \\frac{1}{n^{2}{\\pi}^{2}}\\exp\\left(-\\frac{n^{2}{\\pi}^{2}{\\kappa}t}{L^{2}}\\right)$$\n",
     "\n",
-    "<img src=\"images/sns_model.png\" style=\"width:310px;height:300px\" align=\"center\"/><br>\n",
-    "Note: at age 0, the depth is 2.6 km."
+    "$$= 6400 - 3200\\exp\\left[-\\frac{t}{62.8}\\right]$$\n",
+    "\n",
+    "for $t > 20\\,\\text{Ma}$ where $w_{\\text{final}}$ is the equilibrium depth (Parsons and Sclater, 1977).\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"images/sns_model.png\" style= \"width: 40%\">\n",
+    "\n",
+    "Note: at age $0$, the depth is $2.6\\,km$."
    ]
   },
   {
@@ -246,7 +254,7 @@
    "metadata": {},
    "source": [
     "### Practical 3.3\n",
-    "(a) Using the Stein and Stein half space model, calculate the difference in depth of the seabed at the intersection of a mid-ocean ridge and a transform fault. Assume that the mid-ocean ridge is spreading at 4 cm yr -1 (full rate) and that the ridge is offset 300 km by the transform fault."
+    "(a) Using the Stein and Stein half space model, calculate the difference in depth of the seabed at the intersection of a mid-ocean ridge and a transform fault. Assume that the mid-ocean ridge is spreading at $4\\,\\text{cm}\\,\\text{yr}^{-1}$ (full rate) and that the ridge is offset $300\\,km$ by the transform fault."
    ]
   },
   {
@@ -280,8 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) Calculate the difference in depth on either side of the same fault at 1000/1300 km from the ridge\n",
-    "axis."
+    "(b) Calculate the difference in depth on either side of the same fault at $1000/1300\\,km$ from the ridge axis."
    ]
   },
   {
