--- a/notebooks/d_geosciences/mechanics/3_Work_and_Energy.ipynb
+++ b/notebooks/d_geosciences/mechanics/3_Work_and_Energy.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {
     "tags": [
-     "module-mech"
+     "module-mech",
+     "module-phyp"
     ]
    },
    "source": [
@@ -43,20 +44,20 @@
     "\n",
     "Mathematically, work-energy theorem is stated as the following:\n",
     "\n",
-    "\\\\[W_{12}=\\int_{x_1}^{x_2}F(x)dx\\\\]\n",
+    "$$W_{12}=\\int_{x_1}^{x_2}F(x)\\,dx$$\n",
     "\n",
-    "where \\\\(W_{12}\\\\) is the work done on a body by the force \\\\(F\\\\) as the body moves from point \\\\(x_1\\) to \\(x_2\\\\). \n",
+    "where $W_{12}$ is the work done on a body by the force $F$ as the body moves from point $x_1$ to $x_2$. \n",
     "\n",
-    "\\\\(W_{12}\\\\) is equal to the change in energy when the body moves from \\\\(x_1\\\\) to \\\\(x_2\\\\). \n",
+    "$W_{12}$ is equal to the change in energy when the body moves from $x_1$ to $x_2$. \n",
     "\n",
     "## Forms of energy\n",
     "\n",
     "### Kinetic energy\n",
     "```{index} Kinetic energy\n",
     "```\n",
-    "\\\\[KE=\\frac{1}{2}mv^2\\\\]\n",
+    "$$KE=\\frac{1}{2}mv^2$$\n",
     "\n",
-    "where \\\\(m\\\\) is mass, \\\\(v\\\\) is velocity\n",
+    "where $m$ is mass, $v$ is velocity\n",
     "\n",
     "### Potential energy\n",
     "```{index} Potential energy\n",
@@ -64,14 +65,14 @@
     "#### Gravitational potential energy\n",
     "```{index} Gravitational potential energy\n",
     "```\n",
-    "\\\\[GPE(x)=mgx\\\\]\n",
+    "$$GPE(x)=mgx$$\n",
     "\n",
-    "where \\\\(m\\\\) is mass, \\\\(g\\\\) is gravitational acceleration, \\\\(x\\\\) is the height above a reference point where \\\\(x=0\\\\)\n",
+    "where $m$ is mass, $g$ is gravitational acceleration, $x$ is the height above a reference point where $x=0$\n",
     "\n",
     "#### Elastic potential energy\n",
     "```{index} Elastic potential energy\n",
     "```\n",
-    "\\\\[EPE(x)=\\frac{1}{2}kx^2\\\\]\n",
+    "$$EPE(x)=\\frac{1}{2}kx^2$$\n",
     "\n",
     "Note: **total energy is constant over time**\n",
     "\n",
@@ -87,11 +88,11 @@
    "source": [
     "## Tutorial Problem 3.6\n",
     "\n",
-    "Consider a body connected to a spring, oscillating according to \\\\(x(t)=x_0cos(\\sqrt{\\frac{k}{m}}t)\\\\). \n",
+    "Consider a body connected to a spring, oscillating according to $x(t)=x_0\\cos(\\sqrt{\\frac{k}{m}}t)$. \n",
     "\n",
     "Derive expressions for the elastic potential energy of the body as a function of time, for the kinetic energy of the body as a function of time, and for the total energy of the body as a function of time. \n",
     "\n",
-    "Draw a simple sketch of these energies as a function of time. What is the average value of KE, and the average value of EPE, over one period? You should find that the average values of KE and EPE are equal."
+    "Draw a simple sketch of these energies as a function of time. What is the average value of $KE$, and the average value of $EPE$, over one period? You should find that the average values of $KE$ and $EPE$ are equal."
    ]
   },
   {
