--- a/notebooks/d_geosciences/seismology/Spatial_aliasing.ipynb
+++ b/notebooks/d_geosciences/seismology/Spatial_aliasing.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "## What is it?\n",
-    "We have already considered the issue of temporal aliasing, which occurs when the sampling rate of our seismic data is too low to properly sample high-frequencies in the dataset. One of the solution is cutting away the aliased frequencies (> $f_{notch}$) using filters. \n",
+    "We have already considered the issue of temporal aliasing, which occurs when the sampling rate of our seismic data is too low to properly sample high-frequencies in the dataset. One of the solution is cutting away the aliased frequencies (>$f_{\\text{notch}}$) using filters. \n",
     "\n",
     "As seismic data is sampled also in the distance $x$ dimension, a similar issue of spatial aliasing can occur. Spatial aliasing can result in inaccurate representation of dips in our seismic data, leading to issues with migration and other dip dependant processes."
    ]
@@ -33,31 +33,31 @@
     "\n",
     "As with regular temporal aliasing, we observe spatial aliasing at frequencies where the wavenumber $k$ is too high for each cycle to be sampled twice by a given trace interval $x$:\n",
     "\n",
-    "$$k_{Nyq}=\\frac{1}{2{\\Delta}x}$$\n",
+    "$$k_{\\text{Nyq}}=\\frac{1}{2{\\Delta}x}$$\n",
     "\n",
     "Temporal aliasing will occur at the spatial Nyquist frequency when:\n",
     "\n",
-    "$$f_{Nyq}=v*k_{Nyq}$$\n",
+    "$$f_{\\text{Nyq}}=vk_{\\text{Nyq}}$$\n",
     "\n",
-    "When dealing with gathers in time, <br>\n",
-    "we can consider velocity $v$ as a function of dip (${\\alpha}$, in ms/trace):\n",
+    "When dealing with gathers in time, we can consider velocity $v$ as a function of dip (${\\alpha}$, in $ms$/trace):\n",
     "\n",
     "$$v=\\frac{1000{\\Delta}x}{\\alpha}$$\n",
     "\n",
     "Which combined give:\n",
     "\n",
-    "$$f_{Nyq}=\\frac{500}{\\alpha}$$\n",
+    "$$f_{\\text{Nyq}}=\\frac{500}{\\alpha}$$\n",
     "\n",
     "Wraparound will occur frequencies are higher than the spatial Nyquist frequency <br>\n",
-    "<img src=\"images/wraparound.png\" style=\"width:500px;height:250px\" align=\"center\"/>\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"images/wraparound.png\" style= \"width: 60%\" align=\"center\"/></p>\n",
     "\n",
     "If we consider spatial aliasing in terms of true dip (e.g. in a depth converted stack), then calculating the spatial Nyquist becomes a simple calculation involving velocity $v$, trace spacing (CMP spacing) ${\\Delta}x$ and the dip angle ${\\theta}$:\n",
     "\n",
-    "$$f_{Nyq}=\\frac{v}{4\\:{\\Delta}x\\:{\\sin}{\\theta}}$$\n",
+    "$$f_{\\text{Nyq}}=\\frac{v}{4\\:{\\Delta}x\\:{\\sin}{\\theta}}$$\n",
     "\n",
-    "<img src=\"images/table.png\" style=\"width:300px;height:240px\" align=\"center\"/>\n",
+    "<p style=\"text-align:center;\"><img src=\"images/table.png\" style= \"width: 40%\" align=\"center\"/></p>\n",
     "\n",
-    "$12.5m$ CMP spacing is relatively safe at even relatively high dips considering the bandwidth of most conventional marine surveys. At larger trace spacing however even relatively small dips are at risk of aliasing across a significant portion of the typical bandwidth. Large sampling interval/ trace sapcing or highly dipping events are more prone to spatial aliasing."
+    "$12.5\\,m$ CMP spacing is relatively safe at even relatively high dips considering the bandwidth of most conventional marine surveys. At larger trace spacing however even relatively small dips are at risk of aliasing across a significant portion of the typical bandwidth. Large sampling interval/trace sapcing or highly dipping events are more prone to spatial aliasing."
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "source": [
     "### Practice 1\n",
-    "For a linear event in a seismic section, the time dip is measured in terms of milliseconds per trace. A linear dipping event with a slope of 10 ms/trace on a seismic section, at what temporal frequency will the data be spatially aliased? "
+    "For a linear event in a seismic section, the time dip is measured in terms of milliseconds per trace. A linear dipping event with a slope of $10$ $ms$/trace on a seismic section, at what temporal frequency will the data be spatially aliased? "
    ]
   },
   {
@@ -94,10 +94,9 @@
    "metadata": {},
    "source": [
     "## Spatial Aliasing in t-x domain\n",
-    "Spatial aliasing can be extremely difficult to identify in the t-x domain. Generally, it has a pixelated-like\n",
-    "appearance, particularly along steeply dipping events.\n",
+    "Spatial aliasing can be extremely difficult to identify in the $t$-$x$ domain. Generally, it has a pixelated-like appearance, particularly along steeply dipping events.\n",
     "\n",
-    "<img src=\"images/txdomain.png\" style=\"width:300px;height:240px\" align=\"center\"/>"
+    "<p style=\"text-align:center;\"><img src=\"images/txdomain.png\" style= \"width: 40%\" align=\"center\"/></p>"
    ]
   },
   {
@@ -105,10 +104,11 @@
    "metadata": {},
    "source": [
     "## Spatial Aliasing in F-K domain\n",
-    "Spatial Aliasing is significantly easier to observe in the F-K domain, where frequencies above the spatial Nyquist appear as “wrap-around”. We can design a filter to cut out any aliased energy (though this may result in a loss of bandwidth for higher dips) or resample the data at a smaller trace separation (this will make the data volume larger, resulting in more expensive processing). Vice-versa, if there is no spatial aliasing in a dataset, can we increase the trace separation, making further processing cheaper without degrading the image.\n",
+    "Spatial Aliasing is significantly easier to observe in the $F$-$K$ domain, where frequencies above the spatial Nyquist appear as “wrap-around”. We can design a filter to cut out any aliased energy (though this may result in a loss of bandwidth for higher dips) or resample the data at a smaller trace separation (this will make the data volume larger, resulting in more expensive processing). Vice-versa, if there is no spatial aliasing in a dataset, can we increase the trace separation, making further processing cheaper without degrading the image.\n",
     "\n",
-    "In the figure, the CMP gather is highly affected by wraparound with higher trace separation.<br>\n",
-    "<img src=\"images/fkdomain.png\" style=\"width:300px;height:300px\" align=\"center\"/>"
+    "In the figure, the CMP gather is highly affected by wraparound with higher trace separation.\n",
+    "\n",
+    "<p style=\"text-align:center;\"><img src=\"images/fkdomain.png\" style= \"width: 35%\" align=\"center\"/></p>"
    ]
   },
   {
@@ -129,13 +129,6 @@
     "### Reference\n",
     "2022 notes and practical from Lecture 6 of the module ESE 60023 Seismic Processing and Lecture 2 of the module ESE 70015 Advance Seismic Processing."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
