--- a/notebooks/d_geosciences/seismology/Temporal_aliasing.ipynb
+++ b/notebooks/d_geosciences/seismology/Temporal_aliasing.ipynb
@@ -19,13 +19,13 @@
    "metadata": {},
    "source": [
     "## What is it?\n",
-    "At high frequencies, data exceeding the Nyquist frequency will be aliased, and should be removed. At these frequencies the temporal sampling rate of our data is unable to constrain the signal, and will lead to noise in our data. (e.g. if the data is sampled at 4ms, the Nyquist frequency will be 125 Hz)\n",
+    "At high frequencies, data exceeding the Nyquist frequency will be aliased, and should be removed. At these frequencies the temporal sampling rate of our data is unable to constrain the signal, and will lead to noise in our data. (e.g. if the data is sampled at $4\\,ms$, the Nyquist frequency will be $125\\,Hz$)\n",
     "\n",
-    "$$f_{Nyq}=\\frac{1}{2{\\Delta}t}$$\n",
+    "$$f_{\\text{Nyq}}=\\frac{1}{2{\\Delta}t}$$\n",
     "\n",
-    "$${\\Delta}t\\leq\\frac{1}{2f_{Nyq}}$$\n",
+    "$${\\Delta}t\\leq\\frac{1}{2f_{\\text{Nyq}}}$$\n",
     "\n",
-    "Time dimension $t$ is controlled by the temporal sampling of our traces (e.g. 4ms in our dataset), while distance/offset dimension $x$ is controlled by the spacing of our traces. For a given lateral wavenumber $k_{x}$, the FK migration is remapping the temporal frequency ${\\omega}$ to a new vertical wavenumber $k_{z}$.\n",
+    "Time dimension $t$ is controlled by the temporal sampling of our traces (e.g. $4\\,ms$ in our dataset), while distance/offset dimension $x$ is controlled by the spacing of our traces. For a given lateral wavenumber $k_{x}$, the FK migration is remapping the temporal frequency ${\\omega}$ to a new vertical wavenumber $k_{z}$.\n",
     "\n",
     "$${\\omega}=\\frac{v}{2}\\sqrt{k_{x}^2+k_{z}^2}$$\n",
     "\n",
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "### Practice 1\n",
-    "A marine seismic survey is carried out using a shot interval of 20 m, and a cable containing 120 non-overlapping hydrophone groups with a spacing of 10 m. The hydrophones in water are at a depth of 8 meter. Given sound speed in water is 1500 m/s.\n",
+    "A marine seismic survey is carried out using a shot interval of $20\\,m$, and a cable containing $120$ non-overlapping hydrophone groups with a spacing of $10\\,m$. The hydrophones in water are at a depth of $8\\,m$. Given sound speed in water is $1500\\,m/s$.\n",
     "- Work out the notch frequencies, which limits the available frequencies in the seismic data.\n",
     "- Accroding to the notch frequency, work out the maximum time sampling rate (in integer ms) needed in field data acquisition."
    ]
@@ -92,13 +92,6 @@
     "### Reference\n",
     "2022 notes and practical from Lecture 5 of the module ESE 60023 Seismic Processing and Lecture 2 of the module ESE 70015 Advance Seismic Processing."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
